--- a/q/47.html
+++ b/q/47.html
@@ -1,55 +1,159 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cartoon rabbit cat wing cloth-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cartoon Rabbit Cat Wing Cloth Decorative Clothing SubsidyComplete set (19 styles in total) $:49.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cartoon rabbit cat wing cloth</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon rabbit cat wing cloth" />Buy Now  $:49.99 </a><b>S/N: A47</b></p>
-</div>
- <div class="row">
-  <p>Cartoon Rabbit Cat Wing Cloth Decorative Clothing Subsidy</p><p>Complete set (19 styles in total) $:49.99 <br/></p><p><br/></p><p>可熨 可烫： Can be ironed</p><p>尺寸 5.5*7.5厘米:&nbsp; Size 5.5cm*7.5cm</p>
-  <p><a href="/u/upload/other/20240716/1721097746634082.webp"><img src="/u/upload/other/20240716/1721097746634082.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753940617.webp"><img src="/u/upload/other/20240716/1721097753940617.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753632059.webp"><img src="/u/upload/other/20240716/1721097753632059.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753981101.webp"><img src="/u/upload/other/20240716/1721097753981101.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753868050.webp"><img src="/u/upload/other/20240716/1721097753868050.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753911886.webp"><img src="/u/upload/other/20240716/1721097753911886.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753771122.webp"><img src="/u/upload/other/20240716/1721097753771122.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753217495.webp"><img src="/u/upload/other/20240716/1721097753217495.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753930695.webp"><img src="/u/upload/other/20240716/1721097753930695.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753895646.webp"><img src="/u/upload/other/20240716/1721097753895646.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753100988.webp"><img src="/u/upload/other/20240716/1721097753100988.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753854608.webp"><img src="/u/upload/other/20240716/1721097753854608.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753914821.webp"><img src="/u/upload/other/20240716/1721097753914821.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753271906.webp"><img src="/u/upload/other/20240716/1721097753271906.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753799662.webp"><img src="/u/upload/other/20240716/1721097753799662.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753855257.webp"><img src="/u/upload/other/20240716/1721097753855257.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753519459.webp"><img src="/u/upload/other/20240716/1721097753519459.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753194978.webp"><img src="/u/upload/other/20240716/1721097753194978.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753913142.webp"><img src="/u/upload/other/20240716/1721097753913142.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721097753306919.webp"><img src="/u/upload/other/20240716/1721097753306919.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cartoon rabbit cat wing cloth" /> Buy Now $:49.99</a> <b>S/N: A47</b> </p>
-</div> 
-<p>Previous: <a href="/q/46.html">Skeleton Finger Ghost Head Embroidered Cloth Sticker</a></p>
-<p>Next: <a href="/q/48.html">Cartoon Cubs Embroidered Cloth Sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cartoon rabbit cat wing cloth</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon rabbit cat wing cloth" />Buy Now  $:49.99 </a> <b class="btn btn-sm btn-c">S/N: A47</b></p>
+               <p>Cartoon Rabbit Cat Wing Cloth Decorative Clothing Subsidy</p><p>Complete set (19 styles in total) $:49.99 <br/></p><p><br/></p><p>可熨 可烫： Can be ironed</p><p>尺寸 5.5*7.5厘米:&nbsp; Size 5.5cm*7.5cm</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097746634082.webp">
+                        <img src="/u/upload/other/20240716/1721097746634082.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753940617.webp">
+                        <img src="/u/upload/other/20240716/1721097753940617.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753632059.webp">
+                        <img src="/u/upload/other/20240716/1721097753632059.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753981101.webp">
+                        <img src="/u/upload/other/20240716/1721097753981101.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753868050.webp">
+                        <img src="/u/upload/other/20240716/1721097753868050.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753911886.webp">
+                        <img src="/u/upload/other/20240716/1721097753911886.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753771122.webp">
+                        <img src="/u/upload/other/20240716/1721097753771122.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753217495.webp">
+                        <img src="/u/upload/other/20240716/1721097753217495.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753930695.webp">
+                        <img src="/u/upload/other/20240716/1721097753930695.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753895646.webp">
+                        <img src="/u/upload/other/20240716/1721097753895646.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753100988.webp">
+                        <img src="/u/upload/other/20240716/1721097753100988.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753854608.webp">
+                        <img src="/u/upload/other/20240716/1721097753854608.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753914821.webp">
+                        <img src="/u/upload/other/20240716/1721097753914821.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753271906.webp">
+                        <img src="/u/upload/other/20240716/1721097753271906.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753799662.webp">
+                        <img src="/u/upload/other/20240716/1721097753799662.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753855257.webp">
+                        <img src="/u/upload/other/20240716/1721097753855257.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753519459.webp">
+                        <img src="/u/upload/other/20240716/1721097753519459.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753194978.webp">
+                        <img src="/u/upload/other/20240716/1721097753194978.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753913142.webp">
+                        <img src="/u/upload/other/20240716/1721097753913142.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721097753306919.webp">
+                        <img src="/u/upload/other/20240716/1721097753306919.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/46.html">Skeleton Finger Ghost Head Embroidered Cloth Sticker</a></p>
+            <p>Next: <a href="/q/48.html">Cartoon Cubs Embroidered Cloth Sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
