--- a/q/68.html
+++ b/q/68.html
@@ -1,55 +1,189 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Planet Cartoon Astronaut Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidery Planet Cartoon Astronaut Embroidery Cloth Sticky DIY Package Packaging Garment Patch Patch Wholesale.Complete set (18 styles in total) $:49.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Planet Cartoon Astronaut Embroidered Cloth Sticker</h1>
-<time>2024-07-18</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker" />Buy Now  $:69.99 </a><b>S/N: A68</b></p>
-</div>
- <div class="row">
-  <p>Embroidery Planet Cartoon Astronaut Embroidery Cloth Sticky DIY Package Packaging Garment Patch Patch Wholesale.</p><p>Complete set (18 styles in total) $:69.99<br/></p>
-  <p><a href="/u/upload/other/20240718/1721267365990313.webp"><img src="/u/upload/other/20240718/1721267365990313.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267365981023.webp"><img src="/u/upload/other/20240718/1721267365981023.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267365801204.webp"><img src="/u/upload/other/20240718/1721267365801204.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267365846495.webp"><img src="/u/upload/other/20240718/1721267365846495.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267365105958.webp"><img src="/u/upload/other/20240718/1721267365105958.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267365325140.webp"><img src="/u/upload/other/20240718/1721267365325140.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267365418638.webp"><img src="/u/upload/other/20240718/1721267365418638.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392570473.webp"><img src="/u/upload/other/20240718/1721267392570473.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392695082.webp"><img src="/u/upload/other/20240718/1721267392695082.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392666494.webp"><img src="/u/upload/other/20240718/1721267392666494.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392155508.webp"><img src="/u/upload/other/20240718/1721267392155508.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392468068.webp"><img src="/u/upload/other/20240718/1721267392468068.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392541207.webp"><img src="/u/upload/other/20240718/1721267392541207.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392600810.webp"><img src="/u/upload/other/20240718/1721267392600810.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392951930.webp"><img src="/u/upload/other/20240718/1721267392951930.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392444409.webp"><img src="/u/upload/other/20240718/1721267392444409.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392493701.webp"><img src="/u/upload/other/20240718/1721267392493701.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392511867.webp"><img src="/u/upload/other/20240718/1721267392511867.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392285604.webp"><img src="/u/upload/other/20240718/1721267392285604.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392638452.webp"><img src="/u/upload/other/20240718/1721267392638452.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392428916.webp"><img src="/u/upload/other/20240718/1721267392428916.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392637145.webp"><img src="/u/upload/other/20240718/1721267392637145.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392824553.webp"><img src="/u/upload/other/20240718/1721267392824553.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392339274.webp"><img src="/u/upload/other/20240718/1721267392339274.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721267392634175.webp"><img src="/u/upload/other/20240718/1721267392634175.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Planet Cartoon Astronaut Embroidered Cloth Sticker" /> Buy Now $:69.99</a> <b>S/N: A68</b> </p>
-</div> 
-<p>Previous: <a href="/q/67.html">Cute Flowers Butterfly Embroidery Cloth Sticker</a></p>
-<p>Next: <a href="/q/69.html">Embroidery bear cartoon animal embroidery cloth sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Planet Cartoon Astronaut Embroidered Cloth Sticker</h1>
+                <time>2024-07-18</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker" />Buy Now  $:69.99 </a> <b class="btn btn-sm btn-c">S/N: A68</b></p>
+               <p>Embroidery Planet Cartoon Astronaut Embroidery Cloth Sticky DIY Package Packaging Garment Patch Patch Wholesale.</p><p>Complete set (18 styles in total) $:69.99<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365990313.webp">
+                        <img src="/u/upload/other/20240718/1721267365990313.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365981023.webp">
+                        <img src="/u/upload/other/20240718/1721267365981023.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365801204.webp">
+                        <img src="/u/upload/other/20240718/1721267365801204.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365846495.webp">
+                        <img src="/u/upload/other/20240718/1721267365846495.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365105958.webp">
+                        <img src="/u/upload/other/20240718/1721267365105958.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365325140.webp">
+                        <img src="/u/upload/other/20240718/1721267365325140.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267365418638.webp">
+                        <img src="/u/upload/other/20240718/1721267365418638.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392570473.webp">
+                        <img src="/u/upload/other/20240718/1721267392570473.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392695082.webp">
+                        <img src="/u/upload/other/20240718/1721267392695082.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392666494.webp">
+                        <img src="/u/upload/other/20240718/1721267392666494.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392155508.webp">
+                        <img src="/u/upload/other/20240718/1721267392155508.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392468068.webp">
+                        <img src="/u/upload/other/20240718/1721267392468068.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392541207.webp">
+                        <img src="/u/upload/other/20240718/1721267392541207.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392600810.webp">
+                        <img src="/u/upload/other/20240718/1721267392600810.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392951930.webp">
+                        <img src="/u/upload/other/20240718/1721267392951930.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392444409.webp">
+                        <img src="/u/upload/other/20240718/1721267392444409.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392493701.webp">
+                        <img src="/u/upload/other/20240718/1721267392493701.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392511867.webp">
+                        <img src="/u/upload/other/20240718/1721267392511867.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392285604.webp">
+                        <img src="/u/upload/other/20240718/1721267392285604.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392638452.webp">
+                        <img src="/u/upload/other/20240718/1721267392638452.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392428916.webp">
+                        <img src="/u/upload/other/20240718/1721267392428916.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392637145.webp">
+                        <img src="/u/upload/other/20240718/1721267392637145.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392824553.webp">
+                        <img src="/u/upload/other/20240718/1721267392824553.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392339274.webp">
+                        <img src="/u/upload/other/20240718/1721267392339274.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721267392634175.webp">
+                        <img src="/u/upload/other/20240718/1721267392634175.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/67.html">Cute Flowers Butterfly Embroidery Cloth Sticker</a></p>
+            <p>Next: <a href="/q/69.html">Embroidery bear cartoon animal embroidery cloth sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
