--- a/q/animal_5/index.html
+++ b/q/animal_5/index.html
@@ -19,7 +19,7 @@
         <button class="btn-close btn btn-sm">×</button>
         <div class="container">
             <div class="hero">
-                <h1>Hot sales</h1>
+                <h1>Animal</h1>
                 <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
                 <p>Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals
                 </p>
@@ -27,27 +27,15 @@
             </div>
             <div class="row">
                 <div class="col c4">
-                    <a href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+                    <a href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35" class="btn btn-a" >
+                        <img src="/q/upload/other/20240706/1720226337562267.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35">
                         <b>$:29.99</b>
                     </a>
                 </div>
                 <div class="col c4">
-                    <a href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22" class="btn btn-a" >
-                        <img src="/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
-                        <b>$:29.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47" class="btn btn-a" >
-                        <img src="/u/upload/other/20240717/1721228977433260.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47">
-                        <b>$:29.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13" class="btn btn-a" >
-                        <img src="/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
-                        <b>$:29.99</b>
+                    <a href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43" class="btn btn-a" >
+                        <img src="/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
+                        <b>$:19.99</b>
                     </a>
                 </div>
                 <div class="col c4">
@@ -55,8 +43,20 @@
                         <img src="/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
                         <b>$:39.99</b>
                     </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26">
+                        <b>$:12</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
+                        <b>$:12</b>
+                    </a>
                 </div><br />
-             <p><a href="javascript:;index.html" class="btn btn-b">Previous</a>  <a href="javascript:;index.html" class="btn btn-b">Next</a></p>
+             <p><a href="/q/animal_4/index.html" class="btn btn-b">Previous</a>  <a href="javascript:;index.html" class="btn btn-b">Next</a></p>
             </div>
 		</div>
             <div class="row">
