--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -1,79 +1,92 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Applique Patches-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>Applique Patches</h1>
-<h4></h4>
-<p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers</p>
-<div class="row">
-	
-    <div class="col c6"><a href="/q/70.html" title="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43"><img src="/u/upload/other/20240718/1721274578954710.webp" alt="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/69.html" title="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23"><img src="/u/upload/other/20240718/1721272517666786.webp" alt="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23"><b>$:19.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/68.html" title="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16"><img src="/u/upload/other/20240718/1721267353962092.webp" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16"><b>$:69.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/67.html" title="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14"><img src="/u/upload/other/20240717/1721208094759756.webp" alt="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/66.html" title="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26"><img src="/u/upload/other/20240717/1721203780139162.webp" alt="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/65.html" title="Cute cartoon panda cloth sticker,2024-07-17 15:24:02"><img src="/u/upload/other/20240717/1721201164313182.webp" alt="Cute cartoon panda cloth sticker,2024-07-17 15:24:02"><b>$:19.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/64.html" title="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29"><img src="/u/upload/other/20240717/1721200181342114.webp" alt="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29"><b>$:19.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/63.html" title="Embroidered round coaster,2024-07-17 14:38:50"><img src="/u/upload/other/20240717/1721198840144145.webp" alt="Embroidered round coaster,2024-07-17 14:38:50"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/62.html" title="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49"><img src="/u/upload/other/20240717/1721187660915596.webp" alt="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/61.html" title="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22"><img src="/u/upload/other/20240716/1721122103920304.webp" alt="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/60.html" title="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02"><img src="/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/59.html" title="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49"><img src="/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/58.html" title="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33"><img src="/u/upload/other/20240716/1721120358159448.webp" alt="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33"><b>$:59.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/57.html" title="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34"><img src="/u/upload/other/20240716/1721118138901605.webp" alt="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34"><b>$:59.99</b></a></div>
-	
-</div>
-
-<p><a href="javascript:;index.html">Previous</a>  <a href="/q/patches_2/index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Applique Patches</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/70.html" title="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43" class="btn btn-a" >
+                        <img src="/u/upload/other/20240718/1721274578954710.webp" alt="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/69.html" title="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23" class="btn btn-a" >
+                        <img src="/u/upload/other/20240718/1721272517666786.webp" alt="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23">
+                        <b>$:19.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/68.html" title="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16" class="btn btn-a" >
+                        <img src="/u/upload/other/20240718/1721267353962092.webp" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/67.html" title="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14" class="btn btn-a" >
+                        <img src="/u/upload/other/20240717/1721208094759756.webp" alt="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/66.html" title="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26" class="btn btn-a" >
+                        <img src="/u/upload/other/20240717/1721203780139162.webp" alt="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/65.html" title="Cute cartoon panda cloth sticker,2024-07-17 15:24:02" class="btn btn-a" >
+                        <img src="/u/upload/other/20240717/1721201164313182.webp" alt="Cute cartoon panda cloth sticker,2024-07-17 15:24:02">
+                        <b>$:19.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/64.html" title="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29" class="btn btn-a" >
+                        <img src="/u/upload/other/20240717/1721200181342114.webp" alt="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29">
+                        <b>$:19.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/63.html" title="Embroidered round coaster,2024-07-17 14:38:50" class="btn btn-a" >
+                        <img src="/u/upload/other/20240717/1721198840144145.webp" alt="Embroidered round coaster,2024-07-17 14:38:50">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/62.html" title="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49" class="btn btn-a" >
+                        <img src="/u/upload/other/20240717/1721187660915596.webp" alt="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49">
+                        <b>$:39.99</b>
+                    </a>
+                </div><br />
+             <p><a href="javascript:;index.html" class="btn btn-b">Previous</a>  <a href="/q/patches_2/index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
