--- a/q/patches_7/index.html
+++ b/q/patches_7/index.html
@@ -19,13 +19,37 @@
         <button class="btn-close btn btn-sm">×</button>
         <div class="container">
             <div class="hero">
-                <h1>Flower</h1>
+                <h1>Applique Patches</h1>
                 <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
                 <p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers
                 </p>
                <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
             </div>
             <div class="row">
+                <div class="col c4">
+                    <a href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
+                        <b>$:12.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="btn btn-a" >
+                        <img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
+                        <b>$:12.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26">
+                        <b>$:12</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="btn btn-a" >
+                        <img src="/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
+                        <b>$:13.99</b>
+                    </a>
+                </div>
                 <div class="col c4">
                     <a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="btn btn-a" >
                         <img src="/q/upload/other/20240701/1719800847146446.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
@@ -39,12 +63,18 @@
                     </a>
                 </div>
                 <div class="col c4">
+                    <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
+                        <b>$:12</b>
+                    </a>
+                </div>
+                <div class="col c4">
                     <a href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09" class="btn btn-a" >
                         <img src="/q/upload/other/20240701/1719800181983602.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
                         <b>$:12.99</b>
                     </a>
                 </div><br />
-             <p><a href="/q/flower_2/index.html" class="btn btn-b">Previous</a>  <a href="javascript:;index.html" class="btn btn-b">Next</a></p>
+             <p><a href="/q/patches_6/index.html" class="btn btn-b">Previous</a>  <a href="javascript:;index.html" class="btn btn-b">Next</a></p>
             </div>
 		</div>
             <div class="row">
