--- a/q/10.html
+++ b/q/10.html
@@ -1,55 +1,105 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" />Buy Now  $:12.99 </a><b>S/N: A10</b></p>
-</div>
- <div class="row">
-  <p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</p>
-  <p><a href="/q/upload/other/20240628/1719576587845466.webp"><img src="/q/upload/other/20240628/1719576587845466.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240628/1719576606814069.webp"><img src="/q/upload/other/20240628/1719576606814069.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240628/1719576609289037.webp"><img src="/q/upload/other/20240628/1719576609289037.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-1</p><p><a href="/q/upload/other/20240628/1719576631710830.webp"><img src="/q/upload/other/20240628/1719576631710830.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-2</p><p><a href="/q/upload/other/20240628/1719576633543829.webp"><img src="/q/upload/other/20240628/1719576633543829.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-3</p><p><a href="/q/upload/other/20240628/1719576635103873.webp"><img src="/q/upload/other/20240628/1719576635103873.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-4</p><p><a href="/q/upload/other/20240628/1719576645350825.webp"><img src="/q/upload/other/20240628/1719576645350825.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-5</p><p><a href="/q/upload/other/20240628/1719576648212779.webp"><img src="/q/upload/other/20240628/1719576648212779.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-6</p><p><a href="/q/upload/other/20240628/1719576652572016.webp"><img src="/q/upload/other/20240628/1719576652572016.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-7</p><p><a href="/q/upload/other/20240628/1719576656575737.webp"><img src="/q/upload/other/20240628/1719576656575737.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A10-8</p><p><a href="/q/upload/other/20240628/1719576659935990.webp"><img src="/q/upload/other/20240628/1719576659935990.webp" class="pure-img" alt="Flower"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now $:12.99</a> <b>S/N: A10</b> </p>
-</div> 
-<p>Previous: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
-<p>Next: <a href="/q/11.html">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A10</b></p>
+               <p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576587845466.webp">
+                        <img src="/q/upload/other/20240628/1719576587845466.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576606814069.webp">
+                        <img src="/q/upload/other/20240628/1719576606814069.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576609289037.webp">
+                        <img src="/q/upload/other/20240628/1719576609289037.webp" alt="Flower"/></a>
+                        <b>S/N: A10-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576631710830.webp">
+                        <img src="/q/upload/other/20240628/1719576631710830.webp" alt="Flower"/></a>
+                        <b>S/N: A10-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576633543829.webp">
+                        <img src="/q/upload/other/20240628/1719576633543829.webp" alt="Flower"/></a>
+                        <b>S/N: A10-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576635103873.webp">
+                        <img src="/q/upload/other/20240628/1719576635103873.webp" alt="Flower"/></a>
+                        <b>S/N: A10-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576645350825.webp">
+                        <img src="/q/upload/other/20240628/1719576645350825.webp" alt="Flower"/></a>
+                        <b>S/N: A10-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576648212779.webp">
+                        <img src="/q/upload/other/20240628/1719576648212779.webp" alt="Flower"/></a>
+                        <b>S/N: A10-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576652572016.webp">
+                        <img src="/q/upload/other/20240628/1719576652572016.webp" alt="Flower"/></a>
+                        <b>S/N: A10-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576656575737.webp">
+                        <img src="/q/upload/other/20240628/1719576656575737.webp" alt="Flower"/></a>
+                        <b>S/N: A10-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576659935990.webp">
+                        <img src="/q/upload/other/20240628/1719576659935990.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
+            <p>Next: <a href="/q/11.html">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
