--- a/q/11.html
+++ b/q/11.html
@@ -1,55 +1,57 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lacesize: 25cm * 12cmgum : None, sewing is requiredcolor : This white ，multi-coloredmaterail : polyester yarnworkmanship ：water-soluble embroidery">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</h1>
-<time>2024-06-10</time>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" />Buy Now  $:9.99 </a><b>S/N: A11</b></p>
-</div>
- <div class="row">
-  <p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</p><p>size: 25cm * 12cm&nbsp;</p><p>gum : None, sewing is required&nbsp;</p><p>color : This white ，multi-colored</p><p>materail : polyester yarn</p><div>workmanship ：water-soluble embroidery</div><p><br/></p>
-  <p><a href="/q/upload/other/20240626/1719389747296309.webp"><img src="/q/upload/other/20240626/1719389747296309.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240630/1719759910175716.webp"><img src="/q/upload/other/20240630/1719759910175716.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240630/1719759913915347.webp"><img src="/q/upload/other/20240630/1719759913915347.webp" class="pure-img" alt="Flower"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" /> Buy Now $:9.99</a> <b>S/N: A11</b> </p>
-</div> 
-<p>Previous: <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a></p>
-<p>Next: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</h1>
+                <time>2024-06-10</time>
+				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A11</b></p>
+               <p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</p><p>size: 25cm * 12cm&nbsp;</p><p>gum : None, sewing is required&nbsp;</p><p>color : This white ，multi-colored</p><p>materail : polyester yarn</p><div>workmanship ：water-soluble embroidery</div><p><br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719389747296309.webp">
+                        <img src="/q/upload/other/20240626/1719389747296309.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240630/1719759910175716.webp">
+                        <img src="/q/upload/other/20240630/1719759910175716.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240630/1719759913915347.webp">
+                        <img src="/q/upload/other/20240630/1719759913915347.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a></p>
+            <p>Next: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
