--- a/q/13.html
+++ b/q/13.html
@@ -1,55 +1,69 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidery flower bud lace flower applique-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidery flower bud lace flower applique size: 30cm * 25cmgum : None, sewing is requiredcolor :This whitematerail :polyester yarn">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Embroidery flower bud lace flower applique</h1>
-<time>2024-06-10</time>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery flower bud lace flower applique" />Buy Now  $:13.99 </a><b>S/N: A13</b></p>
-</div>
- <div class="row">
-  <p>Embroidery flower bud lace flower applique <br/></p><p>size: 30cm * 25cm</p><p>gum : None, sewing is required</p><p>color :&nbsp;This white</p><p>materail :&nbsp;polyester yarn</p><p><br/></p>
-  <p><a href="/q/upload/other/20240626/1719390770601289.webp"><img src="/q/upload/other/20240626/1719390770601289.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidery flower bud lace flower applique</p><p><a href="/q/upload/other/20240626/1719390785541558.webp"><img src="/q/upload/other/20240626/1719390785541558.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidery flower bud lace flower applique</p><p><a href="/q/upload/other/20240626/1719390867604008.webp"><img src="/q/upload/other/20240626/1719390867604008.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidery flower bud lace flower applique</p><p><a href="/q/upload/other/20240626/1719390867142653.webp"><img src="/q/upload/other/20240626/1719390867142653.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidery flower bud lace flower applique</p><p><a href="/q/upload/other/20240626/1719390867968414.webp"><img src="/q/upload/other/20240626/1719390867968414.webp" class="pure-img" alt="Flower"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidery flower bud lace flower applique" /> Buy Now $:13.99</a> <b>S/N: A13</b> </p>
-</div> 
-<p>Previous: <a href="/q/11.html">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</a></p>
-<p>Next: <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Embroidery flower bud lace flower applique</h1>
+                <time>2024-06-10</time>
+				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery flower bud lace flower applique" />Buy Now  $:13.99 </a> <b class="btn btn-sm btn-c">S/N: A13</b></p>
+               <p>Embroidery flower bud lace flower applique <br/></p><p>size: 30cm * 25cm</p><p>gum : None, sewing is required</p><p>color :&nbsp;This white</p><p>materail :&nbsp;polyester yarn</p><p><br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390770601289.webp">
+                        <img src="/q/upload/other/20240626/1719390770601289.webp" alt="Flower"/></a>
+                        <b>Embroidery flower bud lace flower applique</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390785541558.webp">
+                        <img src="/q/upload/other/20240626/1719390785541558.webp" alt="Flower"/></a>
+                        <b>Embroidery flower bud lace flower applique</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390867604008.webp">
+                        <img src="/q/upload/other/20240626/1719390867604008.webp" alt="Flower"/></a>
+                        <b>Embroidery flower bud lace flower applique</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390867142653.webp">
+                        <img src="/q/upload/other/20240626/1719390867142653.webp" alt="Flower"/></a>
+                        <b>Embroidery flower bud lace flower applique</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390867968414.webp">
+                        <img src="/q/upload/other/20240626/1719390867968414.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/11.html">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</a></p>
+            <p>Next: <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
