--- a/q/14.html
+++ b/q/14.html
@@ -1,55 +1,69 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" />Buy Now  $:29.99 </a><b>S/N: A14</b></p>
-</div>
- <div class="row">
-  <p>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</p>
-  <p><a href="/q/upload/other/20240701/1719805685113949.webp"><img src="/q/upload/other/20240701/1719805685113949.webp" class="pure-img" alt="Flower"/></a></p><p>Qipao Hanfu collar cloud shoulder</p><p><a href="/q/upload/image/20240701/1719805749310038.webp"><img src="/q/upload/image/20240701/1719805749310038.webp" class="pure-img" alt="Flower"/></a></p><p>Qipao Hanfu collar cloud shoulder</p><p><a href="/q/upload/image/20240701/1719805749284150.webp"><img src="/q/upload/image/20240701/1719805749284150.webp" class="pure-img" alt="Flower"/></a></p><p>Qipao Hanfu collar cloud shoulder</p><p><a href="/q/upload/image/20240701/1719805749667374.webp"><img src="/q/upload/image/20240701/1719805749667374.webp" class="pure-img" alt="Flower"/></a></p><p>Qipao Hanfu collar cloud shoulder</p><p><a href="/q/upload/image/20240701/1719805749337888.webp"><img src="/q/upload/image/20240701/1719805749337888.webp" class="pure-img" alt="Flower"/></a></p><p>Qipao Hanfu collar cloud shoulder</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" /> Buy Now $:29.99</a> <b>S/N: A14</b> </p>
-</div> 
-<p>Previous: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
-<p>Next: <a href="/q/15.html">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A14</b></p>
+               <p>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719805685113949.webp">
+                        <img src="/q/upload/other/20240701/1719805685113949.webp" alt="Flower"/></a>
+                        <b>Qipao Hanfu collar cloud shoulder</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749310038.webp">
+                        <img src="/q/upload/image/20240701/1719805749310038.webp" alt="Flower"/></a>
+                        <b>Qipao Hanfu collar cloud shoulder</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749284150.webp">
+                        <img src="/q/upload/image/20240701/1719805749284150.webp" alt="Flower"/></a>
+                        <b>Qipao Hanfu collar cloud shoulder</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749667374.webp">
+                        <img src="/q/upload/image/20240701/1719805749667374.webp" alt="Flower"/></a>
+                        <b>Qipao Hanfu collar cloud shoulder</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240701/1719805749337888.webp">
+                        <img src="/q/upload/image/20240701/1719805749337888.webp" alt="Flower"/></a>
+                        <b>Qipao Hanfu collar cloud shoulder</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
+            <p>Next: <a href="/q/15.html">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
