--- a/q/15.html
+++ b/q/15.html
@@ -1,55 +1,99 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered water-soluble lace fabric, hand sewn cheongsam, heavy industry subsidy, ethnic peony flowers in stock supply.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</h1>
-<time>2024-06-30</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" />Buy Now  $:12.99 </a><b>S/N: A15</b></p>
-</div>
- <div class="row">
-  
-  <p><a href="/q/upload/other/20240628/1719576419722657.webp"><img src="/q/upload/other/20240628/1719576419722657.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered</p><p><a href="/q/upload/other/20240628/1719576438728427.webp"><img src="/q/upload/other/20240628/1719576438728427.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-1</p><p><a href="/q/upload/other/20240628/1719576442207382.webp"><img src="/q/upload/other/20240628/1719576442207382.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-2</p><p><a href="/q/upload/other/20240628/1719576444923678.webp"><img src="/q/upload/other/20240628/1719576444923678.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-3</p><p><a href="/q/upload/other/20240628/1719576449511699.webp"><img src="/q/upload/other/20240628/1719576449511699.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-4</p><p><a href="/q/upload/other/20240628/1719576451445348.webp"><img src="/q/upload/other/20240628/1719576451445348.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-5</p><p><a href="/q/upload/other/20240628/1719576453759611.webp"><img src="/q/upload/other/20240628/1719576453759611.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-6</p><p><a href="/q/upload/other/20240628/1719576456229242.webp"><img src="/q/upload/other/20240628/1719576456229242.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-7</p><p><a href="/q/upload/other/20240628/1719576458303551.webp"><img src="/q/upload/other/20240628/1719576458303551.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-8</p><p><a href="/q/upload/other/20240628/1719576461501692.webp"><img src="/q/upload/other/20240628/1719576461501692.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A15-9</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" /> Buy Now $:12.99</a> <b>S/N: A15</b> </p>
-</div> 
-<p>Previous: <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a></p>
-<p>Next: <a href="/q/16.html">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</h1>
+                <time>2024-06-30</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A15</b></p>
+               
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576419722657.webp">
+                        <img src="/q/upload/other/20240628/1719576419722657.webp" alt="Flower"/></a>
+                        <b>Embroidered</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576438728427.webp">
+                        <img src="/q/upload/other/20240628/1719576438728427.webp" alt="Flower"/></a>
+                        <b>S/N: A15-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576442207382.webp">
+                        <img src="/q/upload/other/20240628/1719576442207382.webp" alt="Flower"/></a>
+                        <b>S/N: A15-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576444923678.webp">
+                        <img src="/q/upload/other/20240628/1719576444923678.webp" alt="Flower"/></a>
+                        <b>S/N: A15-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576449511699.webp">
+                        <img src="/q/upload/other/20240628/1719576449511699.webp" alt="Flower"/></a>
+                        <b>S/N: A15-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576451445348.webp">
+                        <img src="/q/upload/other/20240628/1719576451445348.webp" alt="Flower"/></a>
+                        <b>S/N: A15-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576453759611.webp">
+                        <img src="/q/upload/other/20240628/1719576453759611.webp" alt="Flower"/></a>
+                        <b>S/N: A15-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576456229242.webp">
+                        <img src="/q/upload/other/20240628/1719576456229242.webp" alt="Flower"/></a>
+                        <b>S/N: A15-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576458303551.webp">
+                        <img src="/q/upload/other/20240628/1719576458303551.webp" alt="Flower"/></a>
+                        <b>S/N: A15-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576461501692.webp">
+                        <img src="/q/upload/other/20240628/1719576461501692.webp" alt="Flower"/></a>
+                        <b>S/N: A15-9</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a></p>
+            <p>Next: <a href="/q/16.html">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
