--- a/q/18.html
+++ b/q/18.html
@@ -1,55 +1,51 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothesMaterial: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on)Size: Approx.full 18cm width x 43cm l">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</h1>
-<time>2024-06-10</time>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" />Buy Now  $:12.99 </a><b>S/N: A18</b></p>
-</div>
- <div class="row">
-  <p>It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothes Material: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on) Size: Approx.full 18cm width x 43cm length. (Due to the handmade sewing,size may vary one to another approx 0.3~0.5cm) Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will come with a true lifetime warranty that is good for one free replacement</p><p><br/></p>
-  <p><a href="/q/upload/other/20240626/1719391194190860.webp"><img src="/q/upload/other/20240626/1719391194190860.webp" class="pure-img" alt="Flower"/></a></p><p>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</p><p><a href="/q/upload/other/20240626/1719391197157726.webp"><img src="/q/upload/other/20240626/1719391197157726.webp" class="pure-img" alt="Flower"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now $:12.99</a> <b>S/N: A18</b> </p>
-</div> 
-<p>Previous: <a href="/q/17.html">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</a></p>
-<p>Next: <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</h1>
+                <time>2024-06-10</time>
+				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A18</b></p>
+               <p>It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothes Material: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on) Size: Approx.full 18cm width x 43cm length. (Due to the handmade sewing,size may vary one to another approx 0.3~0.5cm) Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will come with a true lifetime warranty that is good for one free replacement</p><p><br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391194190860.webp">
+                        <img src="/q/upload/other/20240626/1719391194190860.webp" alt="Flower"/></a>
+                        <b>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391197157726.webp">
+                        <img src="/q/upload/other/20240626/1719391197157726.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/17.html">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</a></p>
+            <p>Next: <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
