--- a/q/2.html
+++ b/q/2.html
@@ -1,55 +1,123 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" />Buy Now  $:9.99 </a><b>S/N: A2</b></p>
-</div>
- <div class="row">
-  <p>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers.</p><p>3D binding without adhesive backing.</p><p>Complete set (10 styles in total) $:59.99 &nbsp;<br/></p>
-  <p><a href="/q/upload/other/20240701/1719821572670537.webp"><img src="/q/upload/other/20240701/1719821572670537.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered lace three-dimensional fabric patch</p><p><a href="/q/upload/other/20240701/1719821572678952.webp"><img src="/q/upload/other/20240701/1719821572678952.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered lace three-dimensional fabric patch</p><p><a href="/q/upload/other/20240701/1719821572589677.webp"><img src="/q/upload/other/20240701/1719821572589677.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered lace three-dimensional fabric patch</p><p><a href="/q/upload/other/20240701/1719821572352926.webp"><img src="/q/upload/other/20240701/1719821572352926.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered lace three-dimensional fabric patch</p><p><a href="/q/upload/other/20240701/1719822093171688.webp"><img src="/q/upload/other/20240701/1719822093171688.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-1</p><p><a href="/q/upload/other/20240701/1719822093465806.webp"><img src="/q/upload/other/20240701/1719822093465806.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-2</p><p><a href="/q/upload/other/20240701/1719822093988766.webp"><img src="/q/upload/other/20240701/1719822093988766.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-3</p><p><a href="/q/upload/other/20240701/1719822093410832.webp"><img src="/q/upload/other/20240701/1719822093410832.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-4</p><p><a href="/q/upload/other/20240701/1719822093336534.webp"><img src="/q/upload/other/20240701/1719822093336534.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-5</p><p><a href="/q/upload/other/20240701/1719822093481303.webp"><img src="/q/upload/other/20240701/1719822093481303.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-6</p><p><a href="/q/upload/other/20240701/1719822093615901.webp"><img src="/q/upload/other/20240701/1719822093615901.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-7</p><p><a href="/q/upload/other/20240701/1719822093632159.webp"><img src="/q/upload/other/20240701/1719822093632159.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-8</p><p><a href="/q/upload/other/20240701/1719822093391741.webp"><img src="/q/upload/other/20240701/1719822093391741.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-9</p><p><a href="/q/upload/other/20240701/1719822093375977.webp"><img src="/q/upload/other/20240701/1719822093375977.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A2-10</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" /> Buy Now $:9.99</a> <b>S/N: A2</b> </p>
-</div> 
-<p>Previous: <a href="javascript:;"> </a></p>
-<p>Next: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A2</b></p>
+               <p>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers.</p><p>3D binding without adhesive backing.</p><p>Complete set (10 styles in total) $:59.99 &nbsp;<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572670537.webp">
+                        <img src="/q/upload/other/20240701/1719821572670537.webp" alt="Flower"/></a>
+                        <b>Embroidered lace three-dimensional fabric patch</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572678952.webp">
+                        <img src="/q/upload/other/20240701/1719821572678952.webp" alt="Flower"/></a>
+                        <b>Embroidered lace three-dimensional fabric patch</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572589677.webp">
+                        <img src="/q/upload/other/20240701/1719821572589677.webp" alt="Flower"/></a>
+                        <b>Embroidered lace three-dimensional fabric patch</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719821572352926.webp">
+                        <img src="/q/upload/other/20240701/1719821572352926.webp" alt="Flower"/></a>
+                        <b>Embroidered lace three-dimensional fabric patch</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093171688.webp">
+                        <img src="/q/upload/other/20240701/1719822093171688.webp" alt="Flower"/></a>
+                        <b>S/N: A2-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093465806.webp">
+                        <img src="/q/upload/other/20240701/1719822093465806.webp" alt="Flower"/></a>
+                        <b>S/N: A2-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093988766.webp">
+                        <img src="/q/upload/other/20240701/1719822093988766.webp" alt="Flower"/></a>
+                        <b>S/N: A2-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093410832.webp">
+                        <img src="/q/upload/other/20240701/1719822093410832.webp" alt="Flower"/></a>
+                        <b>S/N: A2-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093336534.webp">
+                        <img src="/q/upload/other/20240701/1719822093336534.webp" alt="Flower"/></a>
+                        <b>S/N: A2-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093481303.webp">
+                        <img src="/q/upload/other/20240701/1719822093481303.webp" alt="Flower"/></a>
+                        <b>S/N: A2-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093615901.webp">
+                        <img src="/q/upload/other/20240701/1719822093615901.webp" alt="Flower"/></a>
+                        <b>S/N: A2-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093632159.webp">
+                        <img src="/q/upload/other/20240701/1719822093632159.webp" alt="Flower"/></a>
+                        <b>S/N: A2-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093391741.webp">
+                        <img src="/q/upload/other/20240701/1719822093391741.webp" alt="Flower"/></a>
+                        <b>S/N: A2-9</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719822093375977.webp">
+                        <img src="/q/upload/other/20240701/1719822093375977.webp" alt="Flower"/></a>
+                        <b>S/N: A2-10</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="javascript:;"> </a></p>
+            <p>Next: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
