--- a/q/20.html
+++ b/q/20.html
@@ -1,55 +1,57 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Skull cloth patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Your clothes can be so gorgeous">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Skull cloth patch</h1>
-<time>2024-06-10</time>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Skull cloth patch" />Buy Now  $:12 </a><b>S/N: A20</b></p>
-</div>
- <div class="row">
-  <p>Your clothes can be so gorgeous<br/></p>
-  <p><a href="/q/upload/other/20240626/1719391022657043.webp"><img src="/q/upload/other/20240626/1719391022657043.webp" class="pure-img" alt="Animal"/></a></p><p>Your clothes can be so gorgeous</p><p><a href="/q/upload/other/20240626/1719391026119535.webp"><img src="/q/upload/other/20240626/1719391026119535.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240626/1719391028653581.webp"><img src="/q/upload/other/20240626/1719391028653581.webp" class="pure-img" alt="Animal"/></a></p><p>Your clothes</p> 
-</div>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Skull cloth patch" /> Buy Now $:12</a> <b>S/N: A20</b> </p>
-</div> 
-<p>Previous: <a href="javascript:;"> </a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Skull cloth patch</h1>
+                <time>2024-06-10</time>
+				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Skull cloth patch" />Buy Now  $:12 </a> <b class="btn btn-sm btn-c">S/N: A20</b></p>
+               <p>Your clothes can be so gorgeous<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391022657043.webp">
+                        <img src="/q/upload/other/20240626/1719391022657043.webp" alt="Animal"/></a>
+                        <b>Your clothes can be so gorgeous</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391026119535.webp">
+                        <img src="/q/upload/other/20240626/1719391026119535.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719391028653581.webp">
+                        <img src="/q/upload/other/20240626/1719391028653581.webp" alt="Animal"/></a>
+                        <b>Your clothes</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="javascript:;"> </a></p>
+            <p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
