--- a/q/22.html
+++ b/q/22.html
@@ -1,55 +1,99 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</h1>
-<time>2024-06-02</time>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" />Buy Now  $:12 </a><b>S/N: A22</b></p>
-</div>
- <div class="row">
-  <p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</p>
-  <p><a href="/q/upload/other/20240626/1719390299785042.webp"><img src="/q/upload/other/20240626/1719390299785042.webp" class="pure-img" alt="Flower"/></a></p><p>Plum Water Soluble</p><p><a href="/q/upload/image/20201016/1602835379533190.webp"><img src="/q/upload/image/20201016/1602835379533190.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-1</p><p><a href="/q/upload/image/20201016/1602835286604845.webp"><img src="/q/upload/image/20201016/1602835286604845.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-2</p><p><a href="/q/upload/image/20201016/1602835286258353.webp"><img src="/q/upload/image/20201016/1602835286258353.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-3</p><p><a href="/q/upload/image/20201016/1602835286161825.webp"><img src="/q/upload/image/20201016/1602835286161825.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-4</p><p><a href="/q/upload/image/20201016/1602835286958424.webp"><img src="/q/upload/image/20201016/1602835286958424.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-5</p><p><a href="/q/upload/image/20201016/1602835286322972.webp"><img src="/q/upload/image/20201016/1602835286322972.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-6</p><p><a href="/q/upload/image/20201016/1602835364808371.webp"><img src="/q/upload/image/20201016/1602835364808371.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-7</p><p><a href="/q/upload/image/20201016/1602835364279941.webp"><img src="/q/upload/image/20201016/1602835364279941.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-8</p><p><a href="/q/upload/image/20201016/1602835364677527.webp"><img src="/q/upload/image/20201016/1602835364677527.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A22-9</p> 
-</div>
-<div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now $:12</a> <b>S/N: A22</b> </p>
-</div> 
-<p>Previous: <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a></p>
-<p>Next: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</h1>
+                <time>2024-06-02</time>
+				 <p><a class="btn btn-sm btn-b" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" />Buy Now  $:12 </a> <b class="btn btn-sm btn-c">S/N: A22</b></p>
+               <p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240626/1719390299785042.webp">
+                        <img src="/q/upload/other/20240626/1719390299785042.webp" alt="Flower"/></a>
+                        <b>Plum Water Soluble</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835379533190.webp">
+                        <img src="/q/upload/image/20201016/1602835379533190.webp" alt="Flower"/></a>
+                        <b>S/N: A22-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286604845.webp">
+                        <img src="/q/upload/image/20201016/1602835286604845.webp" alt="Flower"/></a>
+                        <b>S/N: A22-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286258353.webp">
+                        <img src="/q/upload/image/20201016/1602835286258353.webp" alt="Flower"/></a>
+                        <b>S/N: A22-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286161825.webp">
+                        <img src="/q/upload/image/20201016/1602835286161825.webp" alt="Flower"/></a>
+                        <b>S/N: A22-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286958424.webp">
+                        <img src="/q/upload/image/20201016/1602835286958424.webp" alt="Flower"/></a>
+                        <b>S/N: A22-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835286322972.webp">
+                        <img src="/q/upload/image/20201016/1602835286322972.webp" alt="Flower"/></a>
+                        <b>S/N: A22-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835364808371.webp">
+                        <img src="/q/upload/image/20201016/1602835364808371.webp" alt="Flower"/></a>
+                        <b>S/N: A22-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835364279941.webp">
+                        <img src="/q/upload/image/20201016/1602835364279941.webp" alt="Flower"/></a>
+                        <b>S/N: A22-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20201016/1602835364677527.webp">
+                        <img src="/q/upload/image/20201016/1602835364677527.webp" alt="Flower"/></a>
+                        <b>S/N: A22-9</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a></p>
+            <p>Next: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
