--- a/q/23.html
+++ b/q/23.html
@@ -1,55 +1,75 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" />Buy Now  $:29.99 </a><b>S/N: A23</b></p>
-</div>
- <div class="row">
-  <p>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</p>
-  <p><a href="/q/upload/other/20240701/1719826872695139.webp"><img src="/q/upload/other/20240701/1719826872695139.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A23</p><p><a href="/q/upload/other/20240701/1719826879232022.webp"><img src="/q/upload/other/20240701/1719826879232022.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A23-1</p><p><a href="/q/upload/other/20240701/1719826991399903.webp"><img src="/q/upload/other/20240701/1719826991399903.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A23-2</p><p><a href="/q/upload/other/20240701/1719826886827244.webp"><img src="/q/upload/other/20240701/1719826886827244.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A23-3</p><p><a href="/q/upload/other/20240701/1719826879252999.webp"><img src="/q/upload/other/20240701/1719826879252999.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A23-4</p><p><a href="/q/upload/other/20240701/1719826886481832.webp"><img src="/q/upload/other/20240701/1719826886481832.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A23-5</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" /> Buy Now $:29.99</a> <b>S/N: A23</b> </p>
-</div> 
-<p>Previous: <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a></p>
-<p>Next: <a href="/q/24.html">Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A23</b></p>
+               <p>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826872695139.webp">
+                        <img src="/q/upload/other/20240701/1719826872695139.webp" alt="Flower"/></a>
+                        <b>S/N: A23</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826879232022.webp">
+                        <img src="/q/upload/other/20240701/1719826879232022.webp" alt="Flower"/></a>
+                        <b>S/N: A23-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826991399903.webp">
+                        <img src="/q/upload/other/20240701/1719826991399903.webp" alt="Flower"/></a>
+                        <b>S/N: A23-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826886827244.webp">
+                        <img src="/q/upload/other/20240701/1719826886827244.webp" alt="Flower"/></a>
+                        <b>S/N: A23-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826879252999.webp">
+                        <img src="/q/upload/other/20240701/1719826879252999.webp" alt="Flower"/></a>
+                        <b>S/N: A23-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719826886481832.webp">
+                        <img src="/q/upload/other/20240701/1719826886481832.webp" alt="Flower"/></a>
+                        <b>S/N: A23-5</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a></p>
+            <p>Next: <a href="/q/24.html">Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
