--- a/q/24.html
+++ b/q/24.html
@@ -1,55 +1,165 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" />Buy Now  $:9.99 </a><b>S/N: A24</b></p>
-</div>
- <div class="row">
-  <p>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers<br/></p><p><br/></p><p>Size: 38cmX20cm</p><p><br/></p><p>Complete set (8 styles in total) $49.99&nbsp;S/N: A25-B</p><p>Complete set (10 styles in total) $59.99&nbsp;S/N: A25-A</p>
-  <p><a href="/q/upload/other/20240701/1719827856399960.webp"><img src="/q/upload/other/20240701/1719827856399960.webp" class="pure-img" alt="Flower"/></a></p><p>water-soluble flowers</p><p><a href="/q/upload/other/20240702/1719913920881701.webp"><img src="/q/upload/other/20240702/1719913920881701.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A25-A</p><p><a href="/q/upload/other/20240702/1719913920752310.webp"><img src="/q/upload/other/20240702/1719913920752310.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-B</p><p><a href="/q/upload/image/20240705/1720174969582447.webp"><img src="/q/upload/image/20240705/1720174969582447.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-1</p><p><a href="/q/upload/image/20240705/1720174969268018.webp"><img src="/q/upload/image/20240705/1720174969268018.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-2</p><p><a href="/q/upload/image/20240705/1720174969654149.webp"><img src="/q/upload/image/20240705/1720174969654149.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-3</p><p><a href="/q/upload/image/20240705/1720174969423689.webp"><img src="/q/upload/image/20240705/1720174969423689.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-4</p><p><a href="/q/upload/image/20240705/1720174969182668.webp"><img src="/q/upload/image/20240705/1720174969182668.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A25-5</p><p><a href="/q/upload/image/20240705/1720174970379261.webp"><img src="/q/upload/image/20240705/1720174970379261.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-6</p><p><a href="/q/upload/image/20240705/1720174970754244.webp"><img src="/q/upload/image/20240705/1720174970754244.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A25-7</p><p><a href="/q/upload/image/20240705/1720174970155085.webp"><img src="/q/upload/image/20240705/1720174970155085.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-8</p><p><a href="/q/upload/image/20240705/1720174970359347.webp"><img src="/q/upload/image/20240705/1720174970359347.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-9</p><p><a href="/q/upload/image/20240705/1720174970149637.webp"><img src="/q/upload/image/20240705/1720174970149637.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-10</p><p><a href="/q/upload/image/20240705/1720175045372000.webp"><img src="/q/upload/image/20240705/1720175045372000.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A25-11</p><p><a href="/q/upload/image/20240705/1720175045141654.webp"><img src="/q/upload/image/20240705/1720175045141654.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-12</p><p><a href="/q/upload/image/20240705/1720175045743773.webp"><img src="/q/upload/image/20240705/1720175045743773.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-13</p><p><a href="/q/upload/image/20240705/1720175045171076.webp"><img src="/q/upload/image/20240705/1720175045171076.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-14</p><p><a href="/q/upload/image/20240705/1720175045562445.webp"><img src="/q/upload/image/20240705/1720175045562445.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-15</p><p><a href="/q/upload/image/20240705/1720175045575816.webp"><img src="/q/upload/image/20240705/1720175045575816.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-16</p><p><a href="/q/upload/image/20240705/1720175045872532.webp"><img src="/q/upload/image/20240705/1720175045872532.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-17</p><p><a href="/q/upload/image/20240705/1720175045568884.webp"><img src="/q/upload/image/20240705/1720175045568884.webp" class="pure-img" alt="Flower"/></a></p><p>S/N:  A25-18</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" /> Buy Now $:9.99</a> <b>S/N: A24</b> </p>
-</div> 
-<p>Previous: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
-<p>Next: <a href="/q/36.html">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A24</b></p>
+               <p>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers<br/></p><p><br/></p><p>Size: 38cmX20cm</p><p><br/></p><p>Complete set (8 styles in total) $49.99&nbsp;S/N: A25-B</p><p>Complete set (10 styles in total) $59.99&nbsp;S/N: A25-A</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719827856399960.webp">
+                        <img src="/q/upload/other/20240701/1719827856399960.webp" alt="Flower"/></a>
+                        <b>water-soluble flowers</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240702/1719913920881701.webp">
+                        <img src="/q/upload/other/20240702/1719913920881701.webp" alt="Flower"/></a>
+                        <b>S/N: A25-A</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240702/1719913920752310.webp">
+                        <img src="/q/upload/other/20240702/1719913920752310.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-B</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969582447.webp">
+                        <img src="/q/upload/image/20240705/1720174969582447.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969268018.webp">
+                        <img src="/q/upload/image/20240705/1720174969268018.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969654149.webp">
+                        <img src="/q/upload/image/20240705/1720174969654149.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969423689.webp">
+                        <img src="/q/upload/image/20240705/1720174969423689.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174969182668.webp">
+                        <img src="/q/upload/image/20240705/1720174969182668.webp" alt="Flower"/></a>
+                        <b>S/N: A25-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970379261.webp">
+                        <img src="/q/upload/image/20240705/1720174970379261.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970754244.webp">
+                        <img src="/q/upload/image/20240705/1720174970754244.webp" alt="Flower"/></a>
+                        <b>S/N: A25-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970155085.webp">
+                        <img src="/q/upload/image/20240705/1720174970155085.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970359347.webp">
+                        <img src="/q/upload/image/20240705/1720174970359347.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-9</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720174970149637.webp">
+                        <img src="/q/upload/image/20240705/1720174970149637.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-10</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045372000.webp">
+                        <img src="/q/upload/image/20240705/1720175045372000.webp" alt="Flower"/></a>
+                        <b>S/N: A25-11</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045141654.webp">
+                        <img src="/q/upload/image/20240705/1720175045141654.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-12</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045743773.webp">
+                        <img src="/q/upload/image/20240705/1720175045743773.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-13</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045171076.webp">
+                        <img src="/q/upload/image/20240705/1720175045171076.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-14</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045562445.webp">
+                        <img src="/q/upload/image/20240705/1720175045562445.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-15</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045575816.webp">
+                        <img src="/q/upload/image/20240705/1720175045575816.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-16</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045872532.webp">
+                        <img src="/q/upload/image/20240705/1720175045872532.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-17</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/image/20240705/1720175045568884.webp">
+                        <img src="/q/upload/image/20240705/1720175045568884.webp" alt="Flower"/></a>
+                        <b>S/N:  A25-18</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
+            <p>Next: <a href="/q/36.html">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
