--- a/q/28.html
+++ b/q/28.html
@@ -1,55 +1,63 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cartoon Rabbit Astronaut-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cartoon rabbit astronaut embroidered fabric patch cute self-adhesive clothing decoration patch patchSize in cm">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cartoon Rabbit Astronaut</h1>
-<time>2024-07-06</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Rabbit Astronaut" />Buy Now  $:12.99 </a><b>S/N: A28</b></p>
-</div>
- <div class="row">
-  <p>Cartoon rabbit astronaut embroidered fabric patch cute self-adhesive clothing decoration patch patch</p><p>Complete set (6 styles in total) $:19.99</p>
-  <p><a href="/q/upload/other/20240706/1720230548555036.webp"><img src="/q/upload/other/20240706/1720230548555036.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon Rabbit Astronaut</p><p><a href="/q/upload/other/20240706/1720230548650206.webp"><img src="/q/upload/other/20240706/1720230548650206.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon Rabbit Astronaut</p><p><a href="/q/upload/other/20240706/1720230548350602.webp"><img src="/q/upload/other/20240706/1720230548350602.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon Rabbit Astronaut</p><p><a href="/q/upload/other/20240706/1720230548301668.webp"><img src="/q/upload/other/20240706/1720230548301668.webp" class="pure-img" alt="Animal"/></a></p><p>Size in cm</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cartoon Rabbit Astronaut" /> Buy Now $:12.99</a> <b>S/N: A28</b> </p>
-</div> 
-<p>Previous: <a href="/q/27.html">Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</a></p>
-<p>Next: <a href="/q/29.html">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cartoon Rabbit Astronaut</h1>
+                <time>2024-07-06</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Rabbit Astronaut" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A28</b></p>
+               <p>Cartoon rabbit astronaut embroidered fabric patch cute self-adhesive clothing decoration patch patch</p><p>Complete set (6 styles in total) $:19.99</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548555036.webp">
+                        <img src="/q/upload/other/20240706/1720230548555036.webp" alt="Animal"/></a>
+                        <b>Cartoon Rabbit Astronaut</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548650206.webp">
+                        <img src="/q/upload/other/20240706/1720230548650206.webp" alt="Animal"/></a>
+                        <b>Cartoon Rabbit Astronaut</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548350602.webp">
+                        <img src="/q/upload/other/20240706/1720230548350602.webp" alt="Animal"/></a>
+                        <b>Cartoon Rabbit Astronaut</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720230548301668.webp">
+                        <img src="/q/upload/other/20240706/1720230548301668.webp" alt="Animal"/></a>
+                        <b>Size in cm</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/27.html">Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</a></p>
+            <p>Next: <a href="/q/29.html">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
