--- a/q/31.html
+++ b/q/31.html
@@ -1,55 +1,69 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cute cartoon cat-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cute cartoon cat embroidered badge, clothing decoration patch, down jacket patch, cloth patchComplete set (4 styles in total) $:9.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cute cartoon cat</h1>
-<time>2024-07-06</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute cartoon cat" />Buy Now  $:9.99 </a><b>S/N: A31</b></p>
-</div>
- <div class="row">
-  
-  <p><a href="/q/upload/other/20240706/1720250451226758.webp"><img src="/q/upload/other/20240706/1720250451226758.webp" class="pure-img" alt="Animal"/></a></p><p>Cute cartoon cat</p><p><a href="/q/upload/other/20240706/1720250451268689.webp"><img src="/q/upload/other/20240706/1720250451268689.webp" class="pure-img" alt="Animal"/></a></p><p>Cute cartoon cat</p><p><a href="/q/upload/other/20240706/1720250451359022.webp"><img src="/q/upload/other/20240706/1720250451359022.webp" class="pure-img" alt="Animal"/></a></p><p>Cute cartoon cat</p><p><a href="/q/upload/other/20240706/1720250451917034.webp"><img src="/q/upload/other/20240706/1720250451917034.webp" class="pure-img" alt="Animal"/></a></p><p>Cute cartoon cat</p><p><a href="/q/upload/other/20240706/1720250451204621.webp"><img src="/q/upload/other/20240706/1720250451204621.webp" class="pure-img" alt="Animal"/></a></p><p>Cute cartoon cat</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cute cartoon cat" /> Buy Now $:9.99</a> <b>S/N: A31</b> </p>
-</div> 
-<p>Previous: <a href="/q/30.html">Cartoon Panda Cute Embroidered Cloth Sticker</a></p>
-<p>Next: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cute cartoon cat</h1>
+                <time>2024-07-06</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute cartoon cat" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A31</b></p>
+               
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451226758.webp">
+                        <img src="/q/upload/other/20240706/1720250451226758.webp" alt="Animal"/></a>
+                        <b>Cute cartoon cat</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451268689.webp">
+                        <img src="/q/upload/other/20240706/1720250451268689.webp" alt="Animal"/></a>
+                        <b>Cute cartoon cat</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451359022.webp">
+                        <img src="/q/upload/other/20240706/1720250451359022.webp" alt="Animal"/></a>
+                        <b>Cute cartoon cat</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451917034.webp">
+                        <img src="/q/upload/other/20240706/1720250451917034.webp" alt="Animal"/></a>
+                        <b>Cute cartoon cat</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720250451204621.webp">
+                        <img src="/q/upload/other/20240706/1720250451204621.webp" alt="Animal"/></a>
+                        <b>Cute cartoon cat</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/30.html">Cartoon Panda Cute Embroidered Cloth Sticker</a></p>
+            <p>Next: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
