--- a/q/32.html
+++ b/q/32.html
@@ -1,55 +1,129 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cartoon flower butterfly embroidered fabric patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickersComplete set (13 styles in total) $:29.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cartoon flower butterfly embroidered fabric patch</h1>
-<time>2024-07-06</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon flower butterfly embroidered fabric patch" />Buy Now  $:29.99 </a><b>S/N: A32</b></p>
-</div>
- <div class="row">
-  <p>Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickers</p><p>Complete set (13 styles in total) $:29.99</p>
-  <p><a href="/q/upload/other/20240706/1720251573246784.webp"><img src="/q/upload/other/20240706/1720251573246784.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon flower embroidery</p><p><a href="/q/upload/other/20240706/1720251573430017.webp"><img src="/q/upload/other/20240706/1720251573430017.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon flower embroidery</p><p><a href="/q/upload/other/20240706/1720253098807291.webp"><img src="/q/upload/other/20240706/1720253098807291.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098595863.webp"><img src="/q/upload/other/20240706/1720253098595863.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098412226.webp"><img src="/q/upload/other/20240706/1720253098412226.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098260947.webp"><img src="/q/upload/other/20240706/1720253098260947.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098429713.webp"><img src="/q/upload/other/20240706/1720253098429713.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098810086.webp"><img src="/q/upload/other/20240706/1720253098810086.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098484024.webp"><img src="/q/upload/other/20240706/1720253098484024.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098920560.webp"><img src="/q/upload/other/20240706/1720253098920560.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098734262.webp"><img src="/q/upload/other/20240706/1720253098734262.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098312937.webp"><img src="/q/upload/other/20240706/1720253098312937.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098483678.webp"><img src="/q/upload/other/20240706/1720253098483678.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098650775.webp"><img src="/q/upload/other/20240706/1720253098650775.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720253098391941.webp"><img src="/q/upload/other/20240706/1720253098391941.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cartoon flower butterfly embroidered fabric patch" /> Buy Now $:29.99</a> <b>S/N: A32</b> </p>
-</div> 
-<p>Previous: <a href="/q/31.html">Cute cartoon cat</a></p>
-<p>Next: <a href="/q/33.html">Cartoon animal embroidery</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cartoon flower butterfly embroidered fabric patch</h1>
+                <time>2024-07-06</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon flower butterfly embroidered fabric patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A32</b></p>
+               <p>Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickers</p><p>Complete set (13 styles in total) $:29.99</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720251573246784.webp">
+                        <img src="/q/upload/other/20240706/1720251573246784.webp" alt="Animal"/></a>
+                        <b>Cartoon flower embroidery</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720251573430017.webp">
+                        <img src="/q/upload/other/20240706/1720251573430017.webp" alt="Animal"/></a>
+                        <b>Cartoon flower embroidery</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098807291.webp">
+                        <img src="/q/upload/other/20240706/1720253098807291.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098595863.webp">
+                        <img src="/q/upload/other/20240706/1720253098595863.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098412226.webp">
+                        <img src="/q/upload/other/20240706/1720253098412226.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098260947.webp">
+                        <img src="/q/upload/other/20240706/1720253098260947.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098429713.webp">
+                        <img src="/q/upload/other/20240706/1720253098429713.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098810086.webp">
+                        <img src="/q/upload/other/20240706/1720253098810086.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098484024.webp">
+                        <img src="/q/upload/other/20240706/1720253098484024.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098920560.webp">
+                        <img src="/q/upload/other/20240706/1720253098920560.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098734262.webp">
+                        <img src="/q/upload/other/20240706/1720253098734262.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098312937.webp">
+                        <img src="/q/upload/other/20240706/1720253098312937.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098483678.webp">
+                        <img src="/q/upload/other/20240706/1720253098483678.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098650775.webp">
+                        <img src="/q/upload/other/20240706/1720253098650775.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720253098391941.webp">
+                        <img src="/q/upload/other/20240706/1720253098391941.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/31.html">Cute cartoon cat</a></p>
+            <p>Next: <a href="/q/33.html">Cartoon animal embroidery</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
