--- a/q/33.html
+++ b/q/33.html
@@ -1,55 +1,117 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cartoon animal embroidery-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cartoon animal embroidery fabric patch cute bag decoration clothing patch embroidered fabric patchComplete set (10 styles in total) $:29.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cartoon animal embroidery</h1>
-<time>2024-07-06</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon animal embroidery" />Buy Now  $:29.99 </a><b>S/N: A33</b></p>
-</div>
- <div class="row">
-  <p>Cartoon animal embroidery fabric patch cute bag decoration clothing patch embroidery patch clothing accessories wholesale <br/></p>
-  <p><a href="/q/upload/other/20240706/1720258303241366.webp"><img src="/q/upload/other/20240706/1720258303241366.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon animal embroidery</p><p><a href="/q/upload/other/20240706/1720258311558960.webp"><img src="/q/upload/other/20240706/1720258311558960.webp" class="pure-img" alt="Animal"/></a></p><p>Cartoon animal embroidery</p><p><a href="/q/upload/other/20240706/1720258311589288.webp"><img src="/q/upload/other/20240706/1720258311589288.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258318678492.webp"><img src="/q/upload/other/20240706/1720258318678492.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258318412781.webp"><img src="/q/upload/other/20240706/1720258318412781.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258318646842.webp"><img src="/q/upload/other/20240706/1720258318646842.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258318567125.webp"><img src="/q/upload/other/20240706/1720258318567125.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258319951388.webp"><img src="/q/upload/other/20240706/1720258319951388.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258319579289.webp"><img src="/q/upload/other/20240706/1720258319579289.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258319543421.webp"><img src="/q/upload/other/20240706/1720258319543421.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258319785740.webp"><img src="/q/upload/other/20240706/1720258319785740.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258319368665.webp"><img src="/q/upload/other/20240706/1720258319368665.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/q/upload/other/20240706/1720258319778786.webp"><img src="/q/upload/other/20240706/1720258319778786.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cartoon animal embroidery" /> Buy Now $:29.99</a> <b>S/N: A33</b> </p>
-</div> 
-<p>Previous: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
-<p>Next: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cartoon animal embroidery</h1>
+                <time>2024-07-06</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon animal embroidery" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A33</b></p>
+               <p>Cartoon animal embroidery fabric patch cute bag decoration clothing patch embroidery patch clothing accessories wholesale <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258303241366.webp">
+                        <img src="/q/upload/other/20240706/1720258303241366.webp" alt="Animal"/></a>
+                        <b>Cartoon animal embroidery</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258311558960.webp">
+                        <img src="/q/upload/other/20240706/1720258311558960.webp" alt="Animal"/></a>
+                        <b>Cartoon animal embroidery</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258311589288.webp">
+                        <img src="/q/upload/other/20240706/1720258311589288.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318678492.webp">
+                        <img src="/q/upload/other/20240706/1720258318678492.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318412781.webp">
+                        <img src="/q/upload/other/20240706/1720258318412781.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318646842.webp">
+                        <img src="/q/upload/other/20240706/1720258318646842.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258318567125.webp">
+                        <img src="/q/upload/other/20240706/1720258318567125.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319951388.webp">
+                        <img src="/q/upload/other/20240706/1720258319951388.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319579289.webp">
+                        <img src="/q/upload/other/20240706/1720258319579289.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319543421.webp">
+                        <img src="/q/upload/other/20240706/1720258319543421.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319785740.webp">
+                        <img src="/q/upload/other/20240706/1720258319785740.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319368665.webp">
+                        <img src="/q/upload/other/20240706/1720258319368665.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240706/1720258319778786.webp">
+                        <img src="/q/upload/other/20240706/1720258319778786.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
+            <p>Next: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
