--- a/q/34.html
+++ b/q/34.html
@@ -1,55 +1,111 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Ice cream cake embroidered cloth patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Ice cream cake embroidered fabric sticker self-adhesive clothing accessories candy sticker clothing patch stickerComplete set (9 styles in total) $:19.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Ice cream cake embroidered cloth patch</h1>
-<time>2024-07-07</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Ice cream cake embroidered cloth patch" />Buy Now  $:29.99 </a><b>S/N: A34</b></p>
-</div>
- <div class="row">
-  <p>Ice cream cake embroidered fabric sticker self-adhesive clothing accessories candy sticker clothing patch sticker</p><p>Complete set (9 styles in total) $:29.99</p><p><br/></p>
-  <p><a href="/u/upload/other/20240707/1720322944913432.webp"><img src="/u/upload/other/20240707/1720322944913432.webp" class="pure-img" alt="Animal"/></a></p><p>Candy sticker</p><p><a href="/u/upload/other/20240707/1720322944198665.webp"><img src="/u/upload/other/20240707/1720322944198665.webp" class="pure-img" alt="Animal"/></a></p><p>Candy sticker</p><p><a href="/u/upload/other/20240707/1720322944172906.webp"><img src="/u/upload/other/20240707/1720322944172906.webp" class="pure-img" alt="Animal"/></a></p><p>Candy sticker</p><p><a href="/u/upload/other/20240707/1720322944855786.webp"><img src="/u/upload/other/20240707/1720322944855786.webp" class="pure-img" alt="Animal"/></a></p><p>lollipop</p><p><a href="/u/upload/other/20240707/1720322944808655.webp"><img src="/u/upload/other/20240707/1720322944808655.webp" class="pure-img" alt="Animal"/></a></p><p>popsicle</p><p><a href="/u/upload/other/20240707/1720322944135251.webp"><img src="/u/upload/other/20240707/1720322944135251.webp" class="pure-img" alt="Animal"/></a></p><p>candy</p><p><a href="/u/upload/other/20240707/1720322944157423.webp"><img src="/u/upload/other/20240707/1720322944157423.webp" class="pure-img" alt="Animal"/></a></p><p>ice cream</p><p><a href="/u/upload/other/20240707/1720322944202224.webp"><img src="/u/upload/other/20240707/1720322944202224.webp" class="pure-img" alt="Animal"/></a></p><p>croissant</p><p><a href="/u/upload/other/20240707/1720322944531201.webp"><img src="/u/upload/other/20240707/1720322944531201.webp" class="pure-img" alt="Animal"/></a></p><p>chocolate</p><p><a href="/u/upload/other/20240707/1720322944963501.webp"><img src="/u/upload/other/20240707/1720322944963501.webp" class="pure-img" alt="Animal"/></a></p><p>Strawberry Cake</p><p><a href="/u/upload/other/20240707/1720322944765536.webp"><img src="/u/upload/other/20240707/1720322944765536.webp" class="pure-img" alt="Animal"/></a></p><p>Cherry smoothie</p><p><a href="/u/upload/other/20240707/1720322944611653.webp"><img src="/u/upload/other/20240707/1720322944611653.webp" class="pure-img" alt="Animal"/></a></p><p>doughnut</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Ice cream cake embroidered cloth patch" /> Buy Now $:29.99</a> <b>S/N: A34</b> </p>
-</div> 
-<p>Previous: <a href="/q/33.html">Cartoon animal embroidery</a></p>
-<p>Next: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Ice cream cake embroidered cloth patch</h1>
+                <time>2024-07-07</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Ice cream cake embroidered cloth patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A34</b></p>
+               <p>Ice cream cake embroidered fabric sticker self-adhesive clothing accessories candy sticker clothing patch sticker</p><p>Complete set (9 styles in total) $:29.99</p><p><br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944913432.webp">
+                        <img src="/u/upload/other/20240707/1720322944913432.webp" alt="Animal"/></a>
+                        <b>Candy sticker</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944198665.webp">
+                        <img src="/u/upload/other/20240707/1720322944198665.webp" alt="Animal"/></a>
+                        <b>Candy sticker</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944172906.webp">
+                        <img src="/u/upload/other/20240707/1720322944172906.webp" alt="Animal"/></a>
+                        <b>Candy sticker</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944855786.webp">
+                        <img src="/u/upload/other/20240707/1720322944855786.webp" alt="Animal"/></a>
+                        <b>lollipop</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944808655.webp">
+                        <img src="/u/upload/other/20240707/1720322944808655.webp" alt="Animal"/></a>
+                        <b>popsicle</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944135251.webp">
+                        <img src="/u/upload/other/20240707/1720322944135251.webp" alt="Animal"/></a>
+                        <b>candy</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944157423.webp">
+                        <img src="/u/upload/other/20240707/1720322944157423.webp" alt="Animal"/></a>
+                        <b>ice cream</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944202224.webp">
+                        <img src="/u/upload/other/20240707/1720322944202224.webp" alt="Animal"/></a>
+                        <b>croissant</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944531201.webp">
+                        <img src="/u/upload/other/20240707/1720322944531201.webp" alt="Animal"/></a>
+                        <b>chocolate</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944963501.webp">
+                        <img src="/u/upload/other/20240707/1720322944963501.webp" alt="Animal"/></a>
+                        <b>Strawberry Cake</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944765536.webp">
+                        <img src="/u/upload/other/20240707/1720322944765536.webp" alt="Animal"/></a>
+                        <b>Cherry smoothie</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720322944611653.webp">
+                        <img src="/u/upload/other/20240707/1720322944611653.webp" alt="Animal"/></a>
+                        <b>doughnut</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/33.html">Cartoon animal embroidery</a></p>
+            <p>Next: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
