--- a/q/35.html
+++ b/q/35.html
@@ -1,55 +1,111 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Plush cartoon teddy bear cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered plush cartoon teddy bear cloth sticker with self-adhesive embroidery sticker DIY bag decoration clothing patch stickerComplete set (9 styles in total) $:29.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Plush cartoon teddy bear cloth sticker</h1>
-<time>2024-07-07</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Plush cartoon teddy bear cloth sticker" />Buy Now  $:29.99 </a><b>S/N: A35</b></p>
-</div>
- <div class="row">
-  <p>Embroidered plush cartoon teddy bear cloth sticker with self-adhesive embroidery sticker DIY bag decoration clothing patch sticker</p><p>Complete set (9 styles in total) $:29.99</p><p><br/></p>
-  <p><a href="/u/upload/other/20240707/1720323895544840.webp"><img src="/u/upload/other/20240707/1720323895544840.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240707/1720323895510535.webp"><img src="/u/upload/other/20240707/1720323895510535.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240707/1720323895401536.webp"><img src="/u/upload/other/20240707/1720323895401536.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240707/1720323895621329.webp"><img src="/u/upload/other/20240707/1720323895621329.webp" class="pure-img" alt="Animal"/></a></p><p>Kitty</p><p><a href="/u/upload/other/20240707/1720323895702901.webp"><img src="/u/upload/other/20240707/1720323895702901.webp" class="pure-img" alt="Animal"/></a></p><p>Kitty2</p><p><a href="/u/upload/other/20240707/1720323895435739.webp"><img src="/u/upload/other/20240707/1720323895435739.webp" class="pure-img" alt="Animal"/></a></p><p>dog</p><p><a href="/u/upload/other/20240707/1720323895653973.webp"><img src="/u/upload/other/20240707/1720323895653973.webp" class="pure-img" alt="Animal"/></a></p><p>dog2</p><p><a href="/u/upload/other/20240707/1720323895737790.webp"><img src="/u/upload/other/20240707/1720323895737790.webp" class="pure-img" alt="Animal"/></a></p><p>rabbit</p><p><a href="/u/upload/other/20240707/1720323895360289.webp"><img src="/u/upload/other/20240707/1720323895360289.webp" class="pure-img" alt="Animal"/></a></p><p>rabbit2</p><p><a href="/u/upload/other/20240707/1720323895130756.webp"><img src="/u/upload/other/20240707/1720323895130756.webp" class="pure-img" alt="Animal"/></a></p><p>Little Bear</p><p><a href="/u/upload/other/20240707/1720323895269691.webp"><img src="/u/upload/other/20240707/1720323895269691.webp" class="pure-img" alt="Animal"/></a></p><p>Little Bear2</p><p><a href="/u/upload/other/20240707/1720323895678853.webp"><img src="/u/upload/other/20240707/1720323895678853.webp" class="pure-img" alt="Animal"/></a></p><p>lamb</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Plush cartoon teddy bear cloth sticker" /> Buy Now $:29.99</a> <b>S/N: A35</b> </p>
-</div> 
-<p>Previous: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
-<p>Next: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Plush cartoon teddy bear cloth sticker</h1>
+                <time>2024-07-07</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Plush cartoon teddy bear cloth sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A35</b></p>
+               <p>Embroidered plush cartoon teddy bear cloth sticker with self-adhesive embroidery sticker DIY bag decoration clothing patch sticker</p><p>Complete set (9 styles in total) $:29.99</p><p><br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895544840.webp">
+                        <img src="/u/upload/other/20240707/1720323895544840.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895510535.webp">
+                        <img src="/u/upload/other/20240707/1720323895510535.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895401536.webp">
+                        <img src="/u/upload/other/20240707/1720323895401536.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895621329.webp">
+                        <img src="/u/upload/other/20240707/1720323895621329.webp" alt="Animal"/></a>
+                        <b>Kitty</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895702901.webp">
+                        <img src="/u/upload/other/20240707/1720323895702901.webp" alt="Animal"/></a>
+                        <b>Kitty2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895435739.webp">
+                        <img src="/u/upload/other/20240707/1720323895435739.webp" alt="Animal"/></a>
+                        <b>dog</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895653973.webp">
+                        <img src="/u/upload/other/20240707/1720323895653973.webp" alt="Animal"/></a>
+                        <b>dog2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895737790.webp">
+                        <img src="/u/upload/other/20240707/1720323895737790.webp" alt="Animal"/></a>
+                        <b>rabbit</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895360289.webp">
+                        <img src="/u/upload/other/20240707/1720323895360289.webp" alt="Animal"/></a>
+                        <b>rabbit2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895130756.webp">
+                        <img src="/u/upload/other/20240707/1720323895130756.webp" alt="Animal"/></a>
+                        <b>Little Bear</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895269691.webp">
+                        <img src="/u/upload/other/20240707/1720323895269691.webp" alt="Animal"/></a>
+                        <b>Little Bear2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720323895678853.webp">
+                        <img src="/u/upload/other/20240707/1720323895678853.webp" alt="Animal"/></a>
+                        <b>lamb</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
+            <p>Next: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
