--- a/q/37.html
+++ b/q/37.html
@@ -1,55 +1,105 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cute little tiger embroidery patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cute Little Tiger Embroidery Patch DIY Phone Case Clothing Accessories Decoration Cartoon Cloth Patch Patch Complete set (9 styles in total) $:29.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cute little tiger embroidery patch</h1>
-<time>2024-07-07</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute little tiger embroidery patch" />Buy Now  $:29.99 </a><b>S/N: A37</b></p>
-</div>
- <div class="row">
-  <p>Cute Little Tiger Embroidery Patch DIY Phone Case Clothing Accessories Decoration Cartoon Cloth Patch Patch &nbsp; <br/></p><p>Complete set (9 styles in total) $:29.99</p>
-  <p><a href="/u/upload/other/20240707/1720335281677699.webp"><img src="/u/upload/other/20240707/1720335281677699.webp" class="pure-img" alt="Animal"/></a></p><p>Cute little tiger</p><p><a href="/u/upload/other/20240707/1720335281128069.webp"><img src="/u/upload/other/20240707/1720335281128069.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37</p><p><a href="/u/upload/other/20240707/1720335281990026.webp"><img src="/u/upload/other/20240707/1720335281990026.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-1</p><p><a href="/u/upload/other/20240707/1720335281843646.webp"><img src="/u/upload/other/20240707/1720335281843646.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-2</p><p><a href="/u/upload/other/20240707/1720335281718311.webp"><img src="/u/upload/other/20240707/1720335281718311.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-3</p><p><a href="/u/upload/other/20240707/1720335281941981.webp"><img src="/u/upload/other/20240707/1720335281941981.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-4</p><p><a href="/u/upload/other/20240707/1720335281779217.webp"><img src="/u/upload/other/20240707/1720335281779217.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-5</p><p><a href="/u/upload/other/20240707/1720335281394444.webp"><img src="/u/upload/other/20240707/1720335281394444.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-6</p><p><a href="/u/upload/other/20240707/1720335281178361.webp"><img src="/u/upload/other/20240707/1720335281178361.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-7</p><p><a href="/u/upload/other/20240707/1720335281855742.webp"><img src="/u/upload/other/20240707/1720335281855742.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-8</p><p><a href="/u/upload/other/20240707/1720335281439605.webp"><img src="/u/upload/other/20240707/1720335281439605.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A37-9</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cute little tiger embroidery patch" /> Buy Now $:29.99</a> <b>S/N: A37</b> </p>
-</div> 
-<p>Previous: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
-<p>Next: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cute little tiger embroidery patch</h1>
+                <time>2024-07-07</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute little tiger embroidery patch" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A37</b></p>
+               <p>Cute Little Tiger Embroidery Patch DIY Phone Case Clothing Accessories Decoration Cartoon Cloth Patch Patch &nbsp; <br/></p><p>Complete set (9 styles in total) $:29.99</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281677699.webp">
+                        <img src="/u/upload/other/20240707/1720335281677699.webp" alt="Animal"/></a>
+                        <b>Cute little tiger</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281128069.webp">
+                        <img src="/u/upload/other/20240707/1720335281128069.webp" alt="Animal"/></a>
+                        <b>S/N: A37</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281990026.webp">
+                        <img src="/u/upload/other/20240707/1720335281990026.webp" alt="Animal"/></a>
+                        <b>S/N: A37-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281843646.webp">
+                        <img src="/u/upload/other/20240707/1720335281843646.webp" alt="Animal"/></a>
+                        <b>S/N: A37-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281718311.webp">
+                        <img src="/u/upload/other/20240707/1720335281718311.webp" alt="Animal"/></a>
+                        <b>S/N: A37-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281941981.webp">
+                        <img src="/u/upload/other/20240707/1720335281941981.webp" alt="Animal"/></a>
+                        <b>S/N: A37-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281779217.webp">
+                        <img src="/u/upload/other/20240707/1720335281779217.webp" alt="Animal"/></a>
+                        <b>S/N: A37-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281394444.webp">
+                        <img src="/u/upload/other/20240707/1720335281394444.webp" alt="Animal"/></a>
+                        <b>S/N: A37-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281178361.webp">
+                        <img src="/u/upload/other/20240707/1720335281178361.webp" alt="Animal"/></a>
+                        <b>S/N: A37-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281855742.webp">
+                        <img src="/u/upload/other/20240707/1720335281855742.webp" alt="Animal"/></a>
+                        <b>S/N: A37-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240707/1720335281439605.webp">
+                        <img src="/u/upload/other/20240707/1720335281439605.webp" alt="Animal"/></a>
+                        <b>S/N: A37-9</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
+            <p>Next: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
