--- a/q/38.html
+++ b/q/38.html
@@ -1,50 +1,38 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Privacy Policy-Blog-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Privacy PolicyThis privacy policy covers zalalaa.com and its associated mirrors.EmailWe will not give away your email address to anyone, who is not related to the operations of zalalaa.com. We will also never ask you to send us any of your passwords via email.LogfilesMost mirrors maintain standard l">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/article/index.html">Blog</a>>> </p>
-<h1>Privacy Policy</h1>
-<time>2024-07-07</time>
-<div class="grid">
-<img src="/q/logo.webp" alt="[content::title],[content::date]">
-  <h1>Privacy Policy</h1><p>This privacy policy covers zalalaa.com and its associated mirrors.</p><h2>Email</h2><p>We will not give away your email address to anyone, who is not related to the operations of zalalaa.com. We will also never ask you to send us any of your passwords via email.</p><h2>Logfiles</h2><p>Most mirrors maintain standard logs of the requests that reach the web servers, but we do only use those files for statistical purposes.</p><p>And to improve your search experience, we store anonymised search terms that are submitted to the site.</p><h2>Cookies</h2><p>zalalaa.com uses cookies to keep track of&nbsp;user preferences. Unless you login on the site, the cookies will not be used to store personal information and we do not give away the information from the cookies.</p><p><br/></p>
-   
-</div>
-<p><a href="javascript:;"> </a></p>
-<p><a href="javascript:;"> </a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/article/index.html">Blog</a></p>
+                <h1>Privacy Policy</h1>
+                <time>2024-07-07</time>
+               <h1>Privacy Policy</h1><p>This privacy policy covers zalalaa.com and its associated mirrors.</p><h2>Email</h2><p>We will not give away your email address to anyone, who is not related to the operations of zalalaa.com. We will also never ask you to send us any of your passwords via email.</p><h2>Logfiles</h2><p>Most mirrors maintain standard logs of the requests that reach the web servers, but we do only use those files for statistical purposes.</p><p>And to improve your search experience, we store anonymised search terms that are submitted to the site.</p><h2>Cookies</h2><p>zalalaa.com uses cookies to keep track of&nbsp;user preferences. Unless you login on the site, the cookies will not be used to store personal information and we do not give away the information from the cookies.</p><p><br/></p>
+            </div>
+			 <div class="row"> 
+			</div>
+			<p>Previous: <a href="javascript:;"> </a></p>
+            <p>Next: <a href="javascript:;"> </a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
