--- a/q/39.html
+++ b/q/39.html
@@ -1,55 +1,117 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Twelve Zodiac Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Twelve zodiac embroidered fabric patch clothing pants denim decoration repair Ding sticker animal pattern children&#39;s patch">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Twelve Zodiac Embroidered Cloth Sticker</h1>
-<time>2024-07-07</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Twelve Zodiac Embroidered Cloth Sticker" />Buy Now  $:9.99 </a><b>S/N: A39</b></p>
-</div>
- <div class="row">
-  <p>Twelve zodiac embroidered fabric patch clothing pants denim decoration repair Ding sticker animal pattern children&#39;s patch <br/></p><p>Complete set (12 styles in total) $:39.99</p>
-  <p><a href="/u/upload/other/20240708/1720399327352439.webp"><img src="/u/upload/other/20240708/1720399327352439.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39</p><p><a href="/u/upload/other/20240708/1720399336813183.webp"><img src="/u/upload/other/20240708/1720399336813183.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-1</p><p><a href="/u/upload/other/20240708/1720399336274075.webp"><img src="/u/upload/other/20240708/1720399336274075.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-2</p><p><a href="/u/upload/other/20240708/1720399336311744.webp"><img src="/u/upload/other/20240708/1720399336311744.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-3</p><p><a href="/u/upload/other/20240708/1720399336275785.webp"><img src="/u/upload/other/20240708/1720399336275785.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-4</p><p><a href="/u/upload/other/20240708/1720399336312714.webp"><img src="/u/upload/other/20240708/1720399336312714.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-5</p><p><a href="/u/upload/other/20240708/1720399336788372.webp"><img src="/u/upload/other/20240708/1720399336788372.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-6</p><p><a href="/u/upload/other/20240708/1720399336587888.webp"><img src="/u/upload/other/20240708/1720399336587888.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-7</p><p><a href="/u/upload/other/20240708/1720399336550496.webp"><img src="/u/upload/other/20240708/1720399336550496.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-8</p><p><a href="/u/upload/other/20240708/1720399336435762.webp"><img src="/u/upload/other/20240708/1720399336435762.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-9</p><p><a href="/u/upload/other/20240708/1720399336246209.webp"><img src="/u/upload/other/20240708/1720399336246209.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-10</p><p><a href="/u/upload/other/20240708/1720399336357173.webp"><img src="/u/upload/other/20240708/1720399336357173.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-11</p><p><a href="/u/upload/other/20240708/1720399336442007.webp"><img src="/u/upload/other/20240708/1720399336442007.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A39-12</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Twelve Zodiac Embroidered Cloth Sticker" /> Buy Now $:9.99</a> <b>S/N: A39</b> </p>
-</div> 
-<p>Previous: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
-<p>Next: <a href="/q/40.html">Hundreds of birds face fengbu cloth embroidery cloth</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Twelve Zodiac Embroidered Cloth Sticker</h1>
+                <time>2024-07-07</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Twelve Zodiac Embroidered Cloth Sticker" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A39</b></p>
+               <p>Twelve zodiac embroidered fabric patch clothing pants denim decoration repair Ding sticker animal pattern children&#39;s patch <br/></p><p>Complete set (12 styles in total) $:39.99</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399327352439.webp">
+                        <img src="/u/upload/other/20240708/1720399327352439.webp" alt="Animal"/></a>
+                        <b>S/N: A39</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336813183.webp">
+                        <img src="/u/upload/other/20240708/1720399336813183.webp" alt="Animal"/></a>
+                        <b>S/N: A39-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336274075.webp">
+                        <img src="/u/upload/other/20240708/1720399336274075.webp" alt="Animal"/></a>
+                        <b>S/N: A39-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336311744.webp">
+                        <img src="/u/upload/other/20240708/1720399336311744.webp" alt="Animal"/></a>
+                        <b>S/N: A39-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336275785.webp">
+                        <img src="/u/upload/other/20240708/1720399336275785.webp" alt="Animal"/></a>
+                        <b>S/N: A39-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336312714.webp">
+                        <img src="/u/upload/other/20240708/1720399336312714.webp" alt="Animal"/></a>
+                        <b>S/N: A39-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336788372.webp">
+                        <img src="/u/upload/other/20240708/1720399336788372.webp" alt="Animal"/></a>
+                        <b>S/N: A39-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336587888.webp">
+                        <img src="/u/upload/other/20240708/1720399336587888.webp" alt="Animal"/></a>
+                        <b>S/N: A39-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336550496.webp">
+                        <img src="/u/upload/other/20240708/1720399336550496.webp" alt="Animal"/></a>
+                        <b>S/N: A39-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336435762.webp">
+                        <img src="/u/upload/other/20240708/1720399336435762.webp" alt="Animal"/></a>
+                        <b>S/N: A39-9</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336246209.webp">
+                        <img src="/u/upload/other/20240708/1720399336246209.webp" alt="Animal"/></a>
+                        <b>S/N: A39-10</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336357173.webp">
+                        <img src="/u/upload/other/20240708/1720399336357173.webp" alt="Animal"/></a>
+                        <b>S/N: A39-11</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240708/1720399336442007.webp">
+                        <img src="/u/upload/other/20240708/1720399336442007.webp" alt="Animal"/></a>
+                        <b>S/N: A39-12</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
+            <p>Next: <a href="/q/40.html">Hundreds of birds face fengbu cloth embroidery cloth</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
