--- a/q/40.html
+++ b/q/40.html
@@ -1,55 +1,165 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Hundreds of birds face fengbu cloth embroidery cloth-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Hundreds of birds facing fengbu paste embroidery cloth supplements clothing pattern hole attachment decorative decal patchesComplete set (20 styles in total) $:69.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Hundreds of birds face fengbu cloth embroidery cloth</h1>
-<time>2024-07-15</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Hundreds of birds face fengbu cloth embroidery cloth" />Buy Now  $:69.99 </a><b>S/N: A40</b></p>
-</div>
- <div class="row">
-  <p>Hundreds of birds facing fengbu paste embroidery cloth supplements clothing pattern hole attachment decorative decal patches</p><p>Complete set (20 styles in total) $:69.99<br/></p><p>birdie 1PCS 9.99<br/></p>
-  <p><a href="/u/upload/other/20240715/1721029319917935.webp"><img src="/u/upload/other/20240715/1721029319917935.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40</p><p><a href="/u/upload/other/20240715/1721029328437409.webp"><img src="/u/upload/other/20240715/1721029328437409.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-1</p><p><a href="/u/upload/other/20240715/1721029328454254.webp"><img src="/u/upload/other/20240715/1721029328454254.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-2</p><p><a href="/u/upload/other/20240715/1721029328429833.webp"><img src="/u/upload/other/20240715/1721029328429833.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-3</p><p><a href="/u/upload/other/20240715/1721029328247722.webp"><img src="/u/upload/other/20240715/1721029328247722.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-4</p><p><a href="/u/upload/other/20240715/1721029328233421.webp"><img src="/u/upload/other/20240715/1721029328233421.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-5</p><p><a href="/u/upload/other/20240715/1721029328527237.webp"><img src="/u/upload/other/20240715/1721029328527237.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-6</p><p><a href="/u/upload/other/20240715/1721029328797143.webp"><img src="/u/upload/other/20240715/1721029328797143.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-7</p><p><a href="/u/upload/other/20240715/1721029328990798.webp"><img src="/u/upload/other/20240715/1721029328990798.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-8</p><p><a href="/u/upload/other/20240715/1721029328282522.webp"><img src="/u/upload/other/20240715/1721029328282522.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-9</p><p><a href="/u/upload/other/20240715/1721029328328508.webp"><img src="/u/upload/other/20240715/1721029328328508.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-10</p><p><a href="/u/upload/other/20240715/1721029328986319.webp"><img src="/u/upload/other/20240715/1721029328986319.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-11</p><p><a href="/u/upload/other/20240715/1721029328706299.webp"><img src="/u/upload/other/20240715/1721029328706299.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-12</p><p><a href="/u/upload/other/20240715/1721029328238040.webp"><img src="/u/upload/other/20240715/1721029328238040.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-13</p><p><a href="/u/upload/other/20240715/1721029328616278.webp"><img src="/u/upload/other/20240715/1721029328616278.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-14</p><p><a href="/u/upload/other/20240715/1721029328837129.webp"><img src="/u/upload/other/20240715/1721029328837129.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-15</p><p><a href="/u/upload/other/20240715/1721029328480578.webp"><img src="/u/upload/other/20240715/1721029328480578.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-16</p><p><a href="/u/upload/other/20240715/1721029328122334.webp"><img src="/u/upload/other/20240715/1721029328122334.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-17</p><p><a href="/u/upload/other/20240715/1721029328730561.webp"><img src="/u/upload/other/20240715/1721029328730561.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-18</p><p><a href="/u/upload/other/20240715/1721029328563045.webp"><img src="/u/upload/other/20240715/1721029328563045.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-19</p><p><a href="/u/upload/other/20240715/1721029328664382.webp"><img src="/u/upload/other/20240715/1721029328664382.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A40-20</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Hundreds of birds face fengbu cloth embroidery cloth" /> Buy Now $:69.99</a> <b>S/N: A40</b> </p>
-</div> 
-<p>Previous: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
-<p>Next: <a href="/q/42.html">Bee Butterfly Ironing Sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Hundreds of birds face fengbu cloth embroidery cloth</h1>
+                <time>2024-07-15</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Hundreds of birds face fengbu cloth embroidery cloth" />Buy Now  $:69.99 </a> <b class="btn btn-sm btn-c">S/N: A40</b></p>
+               <p>Hundreds of birds facing fengbu paste embroidery cloth supplements clothing pattern hole attachment decorative decal patches</p><p>Complete set (20 styles in total) $:69.99<br/></p><p>birdie 1PCS 9.99<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029319917935.webp">
+                        <img src="/u/upload/other/20240715/1721029319917935.webp" alt="Animal"/></a>
+                        <b>S/N: A40</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328437409.webp">
+                        <img src="/u/upload/other/20240715/1721029328437409.webp" alt="Animal"/></a>
+                        <b>S/N: A40-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328454254.webp">
+                        <img src="/u/upload/other/20240715/1721029328454254.webp" alt="Animal"/></a>
+                        <b>S/N: A40-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328429833.webp">
+                        <img src="/u/upload/other/20240715/1721029328429833.webp" alt="Animal"/></a>
+                        <b>S/N: A40-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328247722.webp">
+                        <img src="/u/upload/other/20240715/1721029328247722.webp" alt="Animal"/></a>
+                        <b>S/N: A40-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328233421.webp">
+                        <img src="/u/upload/other/20240715/1721029328233421.webp" alt="Animal"/></a>
+                        <b>S/N: A40-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328527237.webp">
+                        <img src="/u/upload/other/20240715/1721029328527237.webp" alt="Animal"/></a>
+                        <b>S/N: A40-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328797143.webp">
+                        <img src="/u/upload/other/20240715/1721029328797143.webp" alt="Animal"/></a>
+                        <b>S/N: A40-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328990798.webp">
+                        <img src="/u/upload/other/20240715/1721029328990798.webp" alt="Animal"/></a>
+                        <b>S/N: A40-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328282522.webp">
+                        <img src="/u/upload/other/20240715/1721029328282522.webp" alt="Animal"/></a>
+                        <b>S/N: A40-9</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328328508.webp">
+                        <img src="/u/upload/other/20240715/1721029328328508.webp" alt="Animal"/></a>
+                        <b>S/N: A40-10</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328986319.webp">
+                        <img src="/u/upload/other/20240715/1721029328986319.webp" alt="Animal"/></a>
+                        <b>S/N: A40-11</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328706299.webp">
+                        <img src="/u/upload/other/20240715/1721029328706299.webp" alt="Animal"/></a>
+                        <b>S/N: A40-12</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328238040.webp">
+                        <img src="/u/upload/other/20240715/1721029328238040.webp" alt="Animal"/></a>
+                        <b>S/N: A40-13</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328616278.webp">
+                        <img src="/u/upload/other/20240715/1721029328616278.webp" alt="Animal"/></a>
+                        <b>S/N: A40-14</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328837129.webp">
+                        <img src="/u/upload/other/20240715/1721029328837129.webp" alt="Animal"/></a>
+                        <b>S/N: A40-15</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328480578.webp">
+                        <img src="/u/upload/other/20240715/1721029328480578.webp" alt="Animal"/></a>
+                        <b>S/N: A40-16</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328122334.webp">
+                        <img src="/u/upload/other/20240715/1721029328122334.webp" alt="Animal"/></a>
+                        <b>S/N: A40-17</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328730561.webp">
+                        <img src="/u/upload/other/20240715/1721029328730561.webp" alt="Animal"/></a>
+                        <b>S/N: A40-18</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328563045.webp">
+                        <img src="/u/upload/other/20240715/1721029328563045.webp" alt="Animal"/></a>
+                        <b>S/N: A40-19</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721029328664382.webp">
+                        <img src="/u/upload/other/20240715/1721029328664382.webp" alt="Animal"/></a>
+                        <b>S/N: A40-20</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
+            <p>Next: <a href="/q/42.html">Bee Butterfly Ironing Sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
