--- a/q/42.html
+++ b/q/42.html
@@ -1,55 +1,135 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Bee Butterfly Ironing Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Bee Butterfly Ironing Sticking Insect Patch Sticker Embroidery Sticker Embroidery Color StickerComplete set (17 styles in total) $:39.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Bee Butterfly Ironing Sticker</h1>
-<time>2024-07-15</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Bee Butterfly Ironing Sticker" />Buy Now  $:39.99 </a><b>S/N: A42</b></p>
-</div>
- <div class="row">
-  <p>Bee Butterfly Ironing Sticking Insect Patch Sticker Embroidery Sticker Embroidery Color Sticker</p><p>Complete set (17 styles in total) $:39.99 <br/></p>
-  <p><a href="/u/upload/other/20240715/1721035729608726.webp"><img src="/u/upload/other/20240715/1721035729608726.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752394881.webp"><img src="/u/upload/other/20240715/1721035752394881.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752424554.webp"><img src="/u/upload/other/20240715/1721035752424554.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752813734.webp"><img src="/u/upload/other/20240715/1721035752813734.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752472048.webp"><img src="/u/upload/other/20240715/1721035752472048.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752117497.webp"><img src="/u/upload/other/20240715/1721035752117497.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752603486.webp"><img src="/u/upload/other/20240715/1721035752603486.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752819261.webp"><img src="/u/upload/other/20240715/1721035752819261.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752304805.webp"><img src="/u/upload/other/20240715/1721035752304805.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752887778.webp"><img src="/u/upload/other/20240715/1721035752887778.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752579861.webp"><img src="/u/upload/other/20240715/1721035752579861.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752571512.webp"><img src="/u/upload/other/20240715/1721035752571512.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752835907.webp"><img src="/u/upload/other/20240715/1721035752835907.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752530049.webp"><img src="/u/upload/other/20240715/1721035752530049.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752912575.webp"><img src="/u/upload/other/20240715/1721035752912575.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240715/1721035752476947.webp"><img src="/u/upload/other/20240715/1721035752476947.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Bee Butterfly Ironing Sticker" /> Buy Now $:39.99</a> <b>S/N: A42</b> </p>
-</div> 
-<p>Previous: <a href="/q/40.html">Hundreds of birds face fengbu cloth embroidery cloth</a></p>
-<p>Next: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Bee Butterfly Ironing Sticker</h1>
+                <time>2024-07-15</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Bee Butterfly Ironing Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A42</b></p>
+               <p>Bee Butterfly Ironing Sticking Insect Patch Sticker Embroidery Sticker Embroidery Color Sticker</p><p>Complete set (17 styles in total) $:39.99 <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035729608726.webp">
+                        <img src="/u/upload/other/20240715/1721035729608726.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752394881.webp">
+                        <img src="/u/upload/other/20240715/1721035752394881.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752424554.webp">
+                        <img src="/u/upload/other/20240715/1721035752424554.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752813734.webp">
+                        <img src="/u/upload/other/20240715/1721035752813734.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752472048.webp">
+                        <img src="/u/upload/other/20240715/1721035752472048.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752117497.webp">
+                        <img src="/u/upload/other/20240715/1721035752117497.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752603486.webp">
+                        <img src="/u/upload/other/20240715/1721035752603486.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752819261.webp">
+                        <img src="/u/upload/other/20240715/1721035752819261.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752304805.webp">
+                        <img src="/u/upload/other/20240715/1721035752304805.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752887778.webp">
+                        <img src="/u/upload/other/20240715/1721035752887778.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752579861.webp">
+                        <img src="/u/upload/other/20240715/1721035752579861.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752571512.webp">
+                        <img src="/u/upload/other/20240715/1721035752571512.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752835907.webp">
+                        <img src="/u/upload/other/20240715/1721035752835907.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752530049.webp">
+                        <img src="/u/upload/other/20240715/1721035752530049.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752912575.webp">
+                        <img src="/u/upload/other/20240715/1721035752912575.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240715/1721035752476947.webp">
+                        <img src="/u/upload/other/20240715/1721035752476947.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/40.html">Hundreds of birds face fengbu cloth embroidery cloth</a></p>
+            <p>Next: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
