--- a/q/44.html
+++ b/q/44.html
@@ -1,55 +1,141 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Fish Embroidery Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Little Fish Embroidered Sticker Kitten Patch Computer Embroidered Seal Cartoon Embroidered Cloth Sticker Complete set (16 styles in total) $:39.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Fish Embroidery Sticker</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Fish Embroidery Sticker" />Buy Now  $:39.99 </a><b>S/N: A44</b></p>
-</div>
- <div class="row">
-  <p>Little Fish Embroidered Sticker Kitten Patch Computer Embroidered Seal Cartoon Embroidered Cloth Sticker</p><p>Complete set (16 styles in total) $:39.99 <br/></p>
-  <p><a href="/u/upload/other/20240716/1721092385769122.webp"><img src="/u/upload/other/20240716/1721092385769122.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392219256.webp"><img src="/u/upload/other/20240716/1721092392219256.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392547280.webp"><img src="/u/upload/other/20240716/1721092392547280.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392240873.webp"><img src="/u/upload/other/20240716/1721092392240873.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392863543.webp"><img src="/u/upload/other/20240716/1721092392863543.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392708327.webp"><img src="/u/upload/other/20240716/1721092392708327.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392104679.webp"><img src="/u/upload/other/20240716/1721092392104679.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392254042.webp"><img src="/u/upload/other/20240716/1721092392254042.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392286346.webp"><img src="/u/upload/other/20240716/1721092392286346.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392797738.webp"><img src="/u/upload/other/20240716/1721092392797738.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392281936.webp"><img src="/u/upload/other/20240716/1721092392281936.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392608082.webp"><img src="/u/upload/other/20240716/1721092392608082.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392540360.webp"><img src="/u/upload/other/20240716/1721092392540360.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392402751.webp"><img src="/u/upload/other/20240716/1721092392402751.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392568444.webp"><img src="/u/upload/other/20240716/1721092392568444.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392533888.webp"><img src="/u/upload/other/20240716/1721092392533888.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721092392411528.webp"><img src="/u/upload/other/20240716/1721092392411528.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Fish Embroidery Sticker" /> Buy Now $:39.99</a> <b>S/N: A44</b> </p>
-</div> 
-<p>Previous: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
-<p>Next: <a href="/q/45.html">Embroidery Gesture Patch Fashion DIY Dress Patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Fish Embroidery Sticker</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Fish Embroidery Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A44</b></p>
+               <p>Little Fish Embroidered Sticker Kitten Patch Computer Embroidered Seal Cartoon Embroidered Cloth Sticker</p><p>Complete set (16 styles in total) $:39.99 <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092385769122.webp">
+                        <img src="/u/upload/other/20240716/1721092385769122.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392219256.webp">
+                        <img src="/u/upload/other/20240716/1721092392219256.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392547280.webp">
+                        <img src="/u/upload/other/20240716/1721092392547280.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392240873.webp">
+                        <img src="/u/upload/other/20240716/1721092392240873.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392863543.webp">
+                        <img src="/u/upload/other/20240716/1721092392863543.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392708327.webp">
+                        <img src="/u/upload/other/20240716/1721092392708327.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392104679.webp">
+                        <img src="/u/upload/other/20240716/1721092392104679.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392254042.webp">
+                        <img src="/u/upload/other/20240716/1721092392254042.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392286346.webp">
+                        <img src="/u/upload/other/20240716/1721092392286346.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392797738.webp">
+                        <img src="/u/upload/other/20240716/1721092392797738.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392281936.webp">
+                        <img src="/u/upload/other/20240716/1721092392281936.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392608082.webp">
+                        <img src="/u/upload/other/20240716/1721092392608082.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392540360.webp">
+                        <img src="/u/upload/other/20240716/1721092392540360.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392402751.webp">
+                        <img src="/u/upload/other/20240716/1721092392402751.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392568444.webp">
+                        <img src="/u/upload/other/20240716/1721092392568444.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392533888.webp">
+                        <img src="/u/upload/other/20240716/1721092392533888.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721092392411528.webp">
+                        <img src="/u/upload/other/20240716/1721092392411528.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
+            <p>Next: <a href="/q/45.html">Embroidery Gesture Patch Fashion DIY Dress Patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
