--- a/q/45.html
+++ b/q/45.html
@@ -1,55 +1,87 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidery Gesture Patch Fashion DIY Dress Patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Small Cartoon Cloth Embroidery Gesture Patch Fashion Clothes Patch Accessories Decorative Paste Complete set (7 styles in total) $:39.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Embroidery Gesture Patch Fashion DIY Dress Patch</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery Gesture Patch Fashion DIY Dress Patch" />Buy Now  $:39.99 </a><b>S/N: A45</b></p>
-</div>
- <div class="row">
-  <p>Small Cartoon Cloth Embroidery Gesture Patch Fashion Clothes Patch Accessories Decorative Paste</p><p>Complete set (7 styles in total) $:39.99<br/></p><p><br/></p><p>Eyes&nbsp;$:9.99 &nbsp;1pcs</p><p>Hand&nbsp;$:9.99 &nbsp;1pcs</p><p>Hands&nbsp;$:9.99 &nbsp;1pcs</p><p>Leaves&nbsp;$:9.99&nbsp; 1pcs</p><p>Eyebrows&nbsp;$:9.99 &nbsp;1pcs</p><p><br/></p>
-  <p><a href="/u/upload/other/20240716/1721093835624428.webp"><img src="/u/upload/other/20240716/1721093835624428.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841231736.webp"><img src="/u/upload/other/20240716/1721093841231736.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841748746.webp"><img src="/u/upload/other/20240716/1721093841748746.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841970116.webp"><img src="/u/upload/other/20240716/1721093841970116.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841216887.webp"><img src="/u/upload/other/20240716/1721093841216887.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841942526.webp"><img src="/u/upload/other/20240716/1721093841942526.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841274096.webp"><img src="/u/upload/other/20240716/1721093841274096.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721093841740164.webp"><img src="/u/upload/other/20240716/1721093841740164.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidery Gesture Patch Fashion DIY Dress Patch" /> Buy Now $:39.99</a> <b>S/N: A45</b> </p>
-</div> 
-<p>Previous: <a href="/q/44.html">Fish Embroidery Sticker</a></p>
-<p>Next: <a href="/q/46.html">Skeleton Finger Ghost Head Embroidered Cloth Sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Embroidery Gesture Patch Fashion DIY Dress Patch</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery Gesture Patch Fashion DIY Dress Patch" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A45</b></p>
+               <p>Small Cartoon Cloth Embroidery Gesture Patch Fashion Clothes Patch Accessories Decorative Paste</p><p>Complete set (7 styles in total) $:39.99<br/></p><p><br/></p><p>Eyes&nbsp;$:9.99 &nbsp;1pcs</p><p>Hand&nbsp;$:9.99 &nbsp;1pcs</p><p>Hands&nbsp;$:9.99 &nbsp;1pcs</p><p>Leaves&nbsp;$:9.99&nbsp; 1pcs</p><p>Eyebrows&nbsp;$:9.99 &nbsp;1pcs</p><p><br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093835624428.webp">
+                        <img src="/u/upload/other/20240716/1721093835624428.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841231736.webp">
+                        <img src="/u/upload/other/20240716/1721093841231736.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841748746.webp">
+                        <img src="/u/upload/other/20240716/1721093841748746.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841970116.webp">
+                        <img src="/u/upload/other/20240716/1721093841970116.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841216887.webp">
+                        <img src="/u/upload/other/20240716/1721093841216887.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841942526.webp">
+                        <img src="/u/upload/other/20240716/1721093841942526.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841274096.webp">
+                        <img src="/u/upload/other/20240716/1721093841274096.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721093841740164.webp">
+                        <img src="/u/upload/other/20240716/1721093841740164.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/44.html">Fish Embroidery Sticker</a></p>
+            <p>Next: <a href="/q/46.html">Skeleton Finger Ghost Head Embroidered Cloth Sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
