--- a/q/48.html
+++ b/q/48.html
@@ -1,55 +1,141 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cartoon Cubs Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cartoon Cubs embroidered cloth affixed garment decoration epaulettesComplete set (16 styles in total) $:49.99Large Complete set (8 styles in total) $:29.99Trumpet Complete set (8 styles in total) $:19.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cartoon Cubs Embroidered Cloth Sticker</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Cubs Embroidered Cloth Sticker" />Buy Now  $:49.99 </a><b>S/N: A48</b></p>
-</div>
- <div class="row">
-  <p>Cartoon Cubs embroidered cloth affixed garment decoration epaulettes</p><p>Complete set (16 styles in total) $:49.99</p><p>Large Complete set (8 styles in total) $:29.99<br/></p><p>Trumpet Complete set (8 styles in total) $:19.99<br/></p><p><br/></p><p>可熨 可烫： Can be ironed&nbsp;</p><p>尺寸 7.5*9.0厘米: &nbsp;Size 7.5cm*9.0cm</p>
-  <p><a href="/u/upload/other/20240716/1721100161777517.webp"><img src="/u/upload/other/20240716/1721100161777517.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168310826.webp"><img src="/u/upload/other/20240716/1721100168310826.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168783729.webp"><img src="/u/upload/other/20240716/1721100168783729.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168284668.webp"><img src="/u/upload/other/20240716/1721100168284668.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168970169.webp"><img src="/u/upload/other/20240716/1721100168970169.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168319031.webp"><img src="/u/upload/other/20240716/1721100168319031.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168473589.webp"><img src="/u/upload/other/20240716/1721100168473589.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168945267.webp"><img src="/u/upload/other/20240716/1721100168945267.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168979130.webp"><img src="/u/upload/other/20240716/1721100168979130.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168909597.webp"><img src="/u/upload/other/20240716/1721100168909597.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168805377.webp"><img src="/u/upload/other/20240716/1721100168805377.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168974314.webp"><img src="/u/upload/other/20240716/1721100168974314.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168803534.webp"><img src="/u/upload/other/20240716/1721100168803534.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168700579.webp"><img src="/u/upload/other/20240716/1721100168700579.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168623250.webp"><img src="/u/upload/other/20240716/1721100168623250.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168529621.webp"><img src="/u/upload/other/20240716/1721100168529621.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721100168571408.webp"><img src="/u/upload/other/20240716/1721100168571408.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cartoon Cubs Embroidered Cloth Sticker" /> Buy Now $:49.99</a> <b>S/N: A48</b> </p>
-</div> 
-<p>Previous: <a href="/q/47.html">Cartoon rabbit cat wing cloth</a></p>
-<p>Next: <a href="/q/49.html">Cartoon shoes embroidered cloth sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cartoon Cubs Embroidered Cloth Sticker</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon Cubs Embroidered Cloth Sticker" />Buy Now  $:49.99 </a> <b class="btn btn-sm btn-c">S/N: A48</b></p>
+               <p>Cartoon Cubs embroidered cloth affixed garment decoration epaulettes</p><p>Complete set (16 styles in total) $:49.99</p><p>Large Complete set (8 styles in total) $:29.99<br/></p><p>Trumpet Complete set (8 styles in total) $:19.99<br/></p><p><br/></p><p>可熨 可烫： Can be ironed&nbsp;</p><p>尺寸 7.5*9.0厘米: &nbsp;Size 7.5cm*9.0cm</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100161777517.webp">
+                        <img src="/u/upload/other/20240716/1721100161777517.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168310826.webp">
+                        <img src="/u/upload/other/20240716/1721100168310826.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168783729.webp">
+                        <img src="/u/upload/other/20240716/1721100168783729.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168284668.webp">
+                        <img src="/u/upload/other/20240716/1721100168284668.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168970169.webp">
+                        <img src="/u/upload/other/20240716/1721100168970169.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168319031.webp">
+                        <img src="/u/upload/other/20240716/1721100168319031.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168473589.webp">
+                        <img src="/u/upload/other/20240716/1721100168473589.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168945267.webp">
+                        <img src="/u/upload/other/20240716/1721100168945267.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168979130.webp">
+                        <img src="/u/upload/other/20240716/1721100168979130.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168909597.webp">
+                        <img src="/u/upload/other/20240716/1721100168909597.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168805377.webp">
+                        <img src="/u/upload/other/20240716/1721100168805377.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168974314.webp">
+                        <img src="/u/upload/other/20240716/1721100168974314.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168803534.webp">
+                        <img src="/u/upload/other/20240716/1721100168803534.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168700579.webp">
+                        <img src="/u/upload/other/20240716/1721100168700579.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168623250.webp">
+                        <img src="/u/upload/other/20240716/1721100168623250.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168529621.webp">
+                        <img src="/u/upload/other/20240716/1721100168529621.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721100168571408.webp">
+                        <img src="/u/upload/other/20240716/1721100168571408.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/47.html">Cartoon rabbit cat wing cloth</a></p>
+            <p>Next: <a href="/q/49.html">Cartoon shoes embroidered cloth sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
