--- a/q/51.html
+++ b/q/51.html
@@ -1,55 +1,141 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Flamingo Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Flamingo Patch Subsidy Computer Embroidered Embroidered Emblazoned Cloth Apparel Decoration Mend EmbroideredComplete set (16 styles in total) $:69.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Flamingo Embroidery Cloth Sticker</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Flamingo Embroidery Cloth Sticker" />Buy Now  $:69.99 </a><b>S/N: A51</b></p>
-</div>
- <div class="row">
-  <p>Flamingo Patch Subsidy Computer Embroidered Embroidered Emblazoned Cloth Apparel Decoration Mend Embroidered</p><p>Complete set (16 styles in total) $:69.99 <br/></p>
-  <p><a href="/u/upload/other/20240716/1721114139578408.webp"><img src="/u/upload/other/20240716/1721114139578408.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144693653.webp"><img src="/u/upload/other/20240716/1721114144693653.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144467122.webp"><img src="/u/upload/other/20240716/1721114144467122.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144285029.webp"><img src="/u/upload/other/20240716/1721114144285029.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144228965.webp"><img src="/u/upload/other/20240716/1721114144228965.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144112470.webp"><img src="/u/upload/other/20240716/1721114144112470.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144834347.webp"><img src="/u/upload/other/20240716/1721114144834347.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144329626.webp"><img src="/u/upload/other/20240716/1721114144329626.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144791941.webp"><img src="/u/upload/other/20240716/1721114144791941.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144294302.webp"><img src="/u/upload/other/20240716/1721114144294302.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144948600.webp"><img src="/u/upload/other/20240716/1721114144948600.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144701491.webp"><img src="/u/upload/other/20240716/1721114144701491.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144259302.webp"><img src="/u/upload/other/20240716/1721114144259302.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144111687.webp"><img src="/u/upload/other/20240716/1721114144111687.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144920089.webp"><img src="/u/upload/other/20240716/1721114144920089.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144339837.webp"><img src="/u/upload/other/20240716/1721114144339837.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114144206052.webp"><img src="/u/upload/other/20240716/1721114144206052.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Flamingo Embroidery Cloth Sticker" /> Buy Now $:69.99</a> <b>S/N: A51</b> </p>
-</div> 
-<p>Previous: <a href="/q/50.html">Embroidery cloth paste wholesale</a></p>
-<p>Next: <a href="/q/52.html">Sailboat series embroidery cloth stickers</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Flamingo Embroidery Cloth Sticker</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Flamingo Embroidery Cloth Sticker" />Buy Now  $:69.99 </a> <b class="btn btn-sm btn-c">S/N: A51</b></p>
+               <p>Flamingo Patch Subsidy Computer Embroidered Embroidered Emblazoned Cloth Apparel Decoration Mend Embroidered</p><p>Complete set (16 styles in total) $:69.99 <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114139578408.webp">
+                        <img src="/u/upload/other/20240716/1721114139578408.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144693653.webp">
+                        <img src="/u/upload/other/20240716/1721114144693653.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144467122.webp">
+                        <img src="/u/upload/other/20240716/1721114144467122.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144285029.webp">
+                        <img src="/u/upload/other/20240716/1721114144285029.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144228965.webp">
+                        <img src="/u/upload/other/20240716/1721114144228965.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144112470.webp">
+                        <img src="/u/upload/other/20240716/1721114144112470.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144834347.webp">
+                        <img src="/u/upload/other/20240716/1721114144834347.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144329626.webp">
+                        <img src="/u/upload/other/20240716/1721114144329626.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144791941.webp">
+                        <img src="/u/upload/other/20240716/1721114144791941.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144294302.webp">
+                        <img src="/u/upload/other/20240716/1721114144294302.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144948600.webp">
+                        <img src="/u/upload/other/20240716/1721114144948600.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144701491.webp">
+                        <img src="/u/upload/other/20240716/1721114144701491.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144259302.webp">
+                        <img src="/u/upload/other/20240716/1721114144259302.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144111687.webp">
+                        <img src="/u/upload/other/20240716/1721114144111687.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144920089.webp">
+                        <img src="/u/upload/other/20240716/1721114144920089.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144339837.webp">
+                        <img src="/u/upload/other/20240716/1721114144339837.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114144206052.webp">
+                        <img src="/u/upload/other/20240716/1721114144206052.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/50.html">Embroidery cloth paste wholesale</a></p>
+            <p>Next: <a href="/q/52.html">Sailboat series embroidery cloth stickers</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
