--- a/q/52.html
+++ b/q/52.html
@@ -1,55 +1,159 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Sailboat series embroidery cloth stickers-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Sailing Series Badge Back Adhesive Patch Cap Badge Shoe Hat Accessories Embroidery Cloth StickerComplete set (19 styles in total) $:69.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Sailboat series embroidery cloth stickers</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Sailboat series embroidery cloth stickers" />Buy Now  $:69.99 </a><b>S/N: A52</b></p>
-</div>
- <div class="row">
-  <p>Sailing Series Badge Back Adhesive Patch Cap Badge Shoe Hat Accessories Embroidery Cloth Sticker</p><p>Complete set (19 styles in total) $:69.99 &nbsp; <br/></p>
-  <p><a href="/u/upload/other/20240716/1721114589862107.webp"><img src="/u/upload/other/20240716/1721114589862107.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596816905.webp"><img src="/u/upload/other/20240716/1721114596816905.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596921585.webp"><img src="/u/upload/other/20240716/1721114596921585.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596943079.webp"><img src="/u/upload/other/20240716/1721114596943079.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596379696.webp"><img src="/u/upload/other/20240716/1721114596379696.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596729775.webp"><img src="/u/upload/other/20240716/1721114596729775.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596250219.webp"><img src="/u/upload/other/20240716/1721114596250219.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596714850.webp"><img src="/u/upload/other/20240716/1721114596714850.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596126307.webp"><img src="/u/upload/other/20240716/1721114596126307.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596853851.webp"><img src="/u/upload/other/20240716/1721114596853851.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596760167.webp"><img src="/u/upload/other/20240716/1721114596760167.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596963314.webp"><img src="/u/upload/other/20240716/1721114596963314.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596491409.webp"><img src="/u/upload/other/20240716/1721114596491409.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596176255.webp"><img src="/u/upload/other/20240716/1721114596176255.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596149295.webp"><img src="/u/upload/other/20240716/1721114596149295.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596781114.webp"><img src="/u/upload/other/20240716/1721114596781114.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596580369.webp"><img src="/u/upload/other/20240716/1721114596580369.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596919826.webp"><img src="/u/upload/other/20240716/1721114596919826.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596803923.webp"><img src="/u/upload/other/20240716/1721114596803923.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721114596757716.webp"><img src="/u/upload/other/20240716/1721114596757716.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Sailboat series embroidery cloth stickers" /> Buy Now $:69.99</a> <b>S/N: A52</b> </p>
-</div> 
-<p>Previous: <a href="/q/51.html">Flamingo Embroidery Cloth Sticker</a></p>
-<p>Next: <a href="/q/53.html">Leaf embroidery cloth sticker can be ironed hand stitch patch</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Sailboat series embroidery cloth stickers</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Sailboat series embroidery cloth stickers" />Buy Now  $:69.99 </a> <b class="btn btn-sm btn-c">S/N: A52</b></p>
+               <p>Sailing Series Badge Back Adhesive Patch Cap Badge Shoe Hat Accessories Embroidery Cloth Sticker</p><p>Complete set (19 styles in total) $:69.99 &nbsp; <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114589862107.webp">
+                        <img src="/u/upload/other/20240716/1721114589862107.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596816905.webp">
+                        <img src="/u/upload/other/20240716/1721114596816905.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596921585.webp">
+                        <img src="/u/upload/other/20240716/1721114596921585.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596943079.webp">
+                        <img src="/u/upload/other/20240716/1721114596943079.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596379696.webp">
+                        <img src="/u/upload/other/20240716/1721114596379696.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596729775.webp">
+                        <img src="/u/upload/other/20240716/1721114596729775.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596250219.webp">
+                        <img src="/u/upload/other/20240716/1721114596250219.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596714850.webp">
+                        <img src="/u/upload/other/20240716/1721114596714850.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596126307.webp">
+                        <img src="/u/upload/other/20240716/1721114596126307.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596853851.webp">
+                        <img src="/u/upload/other/20240716/1721114596853851.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596760167.webp">
+                        <img src="/u/upload/other/20240716/1721114596760167.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596963314.webp">
+                        <img src="/u/upload/other/20240716/1721114596963314.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596491409.webp">
+                        <img src="/u/upload/other/20240716/1721114596491409.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596176255.webp">
+                        <img src="/u/upload/other/20240716/1721114596176255.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596149295.webp">
+                        <img src="/u/upload/other/20240716/1721114596149295.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596781114.webp">
+                        <img src="/u/upload/other/20240716/1721114596781114.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596580369.webp">
+                        <img src="/u/upload/other/20240716/1721114596580369.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596919826.webp">
+                        <img src="/u/upload/other/20240716/1721114596919826.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596803923.webp">
+                        <img src="/u/upload/other/20240716/1721114596803923.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721114596757716.webp">
+                        <img src="/u/upload/other/20240716/1721114596757716.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/51.html">Flamingo Embroidery Cloth Sticker</a></p>
+            <p>Next: <a href="/q/53.html">Leaf embroidery cloth sticker can be ironed hand stitch patch</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
