--- a/q/54.html
+++ b/q/54.html
@@ -1,55 +1,129 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cartoon flower cloth embroidery patch-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cartoon Flower Cloth Embroidery Patch Subsidy 14 FlowersComplete set (14 styles in total) $:39.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Cartoon flower cloth embroidery patch</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon flower cloth embroidery patch" />Buy Now  $:39.99 </a><b>S/N: A54</b></p>
-</div>
- <div class="row">
-  <p>Cartoon Flower Cloth Embroidery Patch Subsidy 14 Flowers</p><p>Complete set (14 styles in total) $:39.99<br/></p>
-  <p><a href="/u/upload/other/20240716/1721116024205321.webp"><img src="/u/upload/other/20240716/1721116024205321.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150175416.webp"><img src="/u/upload/other/20240716/1721116150175416.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150209589.webp"><img src="/u/upload/other/20240716/1721116150209589.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150127197.webp"><img src="/u/upload/other/20240716/1721116150127197.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150624104.webp"><img src="/u/upload/other/20240716/1721116150624104.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150917771.webp"><img src="/u/upload/other/20240716/1721116150917771.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150135730.webp"><img src="/u/upload/other/20240716/1721116150135730.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150112653.webp"><img src="/u/upload/other/20240716/1721116150112653.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150700038.webp"><img src="/u/upload/other/20240716/1721116150700038.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150815388.webp"><img src="/u/upload/other/20240716/1721116150815388.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150703530.webp"><img src="/u/upload/other/20240716/1721116150703530.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150164311.webp"><img src="/u/upload/other/20240716/1721116150164311.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150574213.webp"><img src="/u/upload/other/20240716/1721116150574213.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150281367.webp"><img src="/u/upload/other/20240716/1721116150281367.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721116150112397.webp"><img src="/u/upload/other/20240716/1721116150112397.webp" class="pure-img" alt="Flower"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cartoon flower cloth embroidery patch" /> Buy Now $:39.99</a> <b>S/N: A54</b> </p>
-</div> 
-<p>Previous: <a href="/q/41.html">Embroidery Little Flowers</a></p>
-<p>Next: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Cartoon flower cloth embroidery patch</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cartoon flower cloth embroidery patch" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A54</b></p>
+               <p>Cartoon Flower Cloth Embroidery Patch Subsidy 14 Flowers</p><p>Complete set (14 styles in total) $:39.99<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116024205321.webp">
+                        <img src="/u/upload/other/20240716/1721116024205321.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150175416.webp">
+                        <img src="/u/upload/other/20240716/1721116150175416.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150209589.webp">
+                        <img src="/u/upload/other/20240716/1721116150209589.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150127197.webp">
+                        <img src="/u/upload/other/20240716/1721116150127197.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150624104.webp">
+                        <img src="/u/upload/other/20240716/1721116150624104.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150917771.webp">
+                        <img src="/u/upload/other/20240716/1721116150917771.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150135730.webp">
+                        <img src="/u/upload/other/20240716/1721116150135730.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150112653.webp">
+                        <img src="/u/upload/other/20240716/1721116150112653.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150700038.webp">
+                        <img src="/u/upload/other/20240716/1721116150700038.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150815388.webp">
+                        <img src="/u/upload/other/20240716/1721116150815388.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150703530.webp">
+                        <img src="/u/upload/other/20240716/1721116150703530.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150164311.webp">
+                        <img src="/u/upload/other/20240716/1721116150164311.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150574213.webp">
+                        <img src="/u/upload/other/20240716/1721116150574213.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150281367.webp">
+                        <img src="/u/upload/other/20240716/1721116150281367.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721116150112397.webp">
+                        <img src="/u/upload/other/20240716/1721116150112397.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/41.html">Embroidery Little Flowers</a></p>
+            <p>Next: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
