--- a/q/59.html
+++ b/q/59.html
@@ -1,55 +1,189 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Multi-coloured small flowers embroidered cartoon cloth affixed children&#39;s clothes decoration patches patches decoration.Complete set (22 styles in total) $:29.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker</h1>
-<time>2024-07-16</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker" />Buy Now  $:29.99 </a><b>S/N: A59</b></p>
-</div>
- <div class="row">
-  <p>Multi-coloured small flowers embroidered cartoon cloth affixed children&#39;s clothes decoration patches patches decoration.</p><p>Complete set (22 styles in total) $:29.99<br/></p>
-  <p><a href="/u/upload/other/20240716/1721121011841362.webp"><img src="/u/upload/other/20240716/1721121011841362.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018462905.webp"><img src="/u/upload/other/20240716/1721121018462905.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018641511.webp"><img src="/u/upload/other/20240716/1721121018641511.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018560727.webp"><img src="/u/upload/other/20240716/1721121018560727.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018511377.webp"><img src="/u/upload/other/20240716/1721121018511377.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018902048.webp"><img src="/u/upload/other/20240716/1721121018902048.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018941223.webp"><img src="/u/upload/other/20240716/1721121018941223.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018920516.webp"><img src="/u/upload/other/20240716/1721121018920516.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018796233.webp"><img src="/u/upload/other/20240716/1721121018796233.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018349206.webp"><img src="/u/upload/other/20240716/1721121018349206.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018454169.webp"><img src="/u/upload/other/20240716/1721121018454169.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018937839.webp"><img src="/u/upload/other/20240716/1721121018937839.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018559147.webp"><img src="/u/upload/other/20240716/1721121018559147.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018983925.webp"><img src="/u/upload/other/20240716/1721121018983925.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018358711.webp"><img src="/u/upload/other/20240716/1721121018358711.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018330502.webp"><img src="/u/upload/other/20240716/1721121018330502.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018852862.webp"><img src="/u/upload/other/20240716/1721121018852862.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018993709.webp"><img src="/u/upload/other/20240716/1721121018993709.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018992447.webp"><img src="/u/upload/other/20240716/1721121018992447.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018854266.webp"><img src="/u/upload/other/20240716/1721121018854266.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018855644.webp"><img src="/u/upload/other/20240716/1721121018855644.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018291534.webp"><img src="/u/upload/other/20240716/1721121018291534.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018987902.webp"><img src="/u/upload/other/20240716/1721121018987902.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018114684.webp"><img src="/u/upload/other/20240716/1721121018114684.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/u/upload/other/20240716/1721121018764769.webp"><img src="/u/upload/other/20240716/1721121018764769.webp" class="pure-img" alt="Flower"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker" /> Buy Now $:29.99</a> <b>S/N: A59</b> </p>
-</div> 
-<p>Previous: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
-<p>Next: <a href="/q/60.html">Multicoloured flowers embroidery patch decoration</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker</h1>
+                <time>2024-07-16</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A59</b></p>
+               <p>Multi-coloured small flowers embroidered cartoon cloth affixed children&#39;s clothes decoration patches patches decoration.</p><p>Complete set (22 styles in total) $:29.99<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121011841362.webp">
+                        <img src="/u/upload/other/20240716/1721121011841362.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018462905.webp">
+                        <img src="/u/upload/other/20240716/1721121018462905.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018641511.webp">
+                        <img src="/u/upload/other/20240716/1721121018641511.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018560727.webp">
+                        <img src="/u/upload/other/20240716/1721121018560727.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018511377.webp">
+                        <img src="/u/upload/other/20240716/1721121018511377.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018902048.webp">
+                        <img src="/u/upload/other/20240716/1721121018902048.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018941223.webp">
+                        <img src="/u/upload/other/20240716/1721121018941223.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018920516.webp">
+                        <img src="/u/upload/other/20240716/1721121018920516.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018796233.webp">
+                        <img src="/u/upload/other/20240716/1721121018796233.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018349206.webp">
+                        <img src="/u/upload/other/20240716/1721121018349206.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018454169.webp">
+                        <img src="/u/upload/other/20240716/1721121018454169.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018937839.webp">
+                        <img src="/u/upload/other/20240716/1721121018937839.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018559147.webp">
+                        <img src="/u/upload/other/20240716/1721121018559147.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018983925.webp">
+                        <img src="/u/upload/other/20240716/1721121018983925.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018358711.webp">
+                        <img src="/u/upload/other/20240716/1721121018358711.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018330502.webp">
+                        <img src="/u/upload/other/20240716/1721121018330502.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018852862.webp">
+                        <img src="/u/upload/other/20240716/1721121018852862.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018993709.webp">
+                        <img src="/u/upload/other/20240716/1721121018993709.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018992447.webp">
+                        <img src="/u/upload/other/20240716/1721121018992447.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018854266.webp">
+                        <img src="/u/upload/other/20240716/1721121018854266.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018855644.webp">
+                        <img src="/u/upload/other/20240716/1721121018855644.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018291534.webp">
+                        <img src="/u/upload/other/20240716/1721121018291534.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018987902.webp">
+                        <img src="/u/upload/other/20240716/1721121018987902.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018114684.webp">
+                        <img src="/u/upload/other/20240716/1721121018114684.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240716/1721121018764769.webp">
+                        <img src="/u/upload/other/20240716/1721121018764769.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
+            <p>Next: <a href="/q/60.html">Multicoloured flowers embroidery patch decoration</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
