--- a/q/63.html
+++ b/q/63.html
@@ -1,55 +1,129 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidered round coaster-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Chinese Style Embroidery Coaster Embroidery Technology Overseas Gift Tea Coaster Bowl Mat Insulation Mat Diameter：13cm Complete set (13 styles in total) $:69.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Embroidered round coaster</h1>
-<time>2024-07-17</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered round coaster" />Buy Now  $:9.99 </a><b>S/N: A63</b></p>
-</div>
- <div class="row">
-  <p>Chinese Style Embroidery Coaster Embroidery Technology Overseas Gift Tea Coaster Bowl Mat Insulation Mat</p><p>Diameter：13cm</p><p>Complete set (13 styles in total) $:69.99 <br/></p>
-  <p><a href="/u/upload/other/20240717/1721198850843830.webp"><img src="/u/upload/other/20240717/1721198850843830.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63</p><p><a href="/u/upload/other/20240717/1721198858241612.webp"><img src="/u/upload/other/20240717/1721198858241612.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-1</p><p><a href="/u/upload/other/20240717/1721198858330911.webp"><img src="/u/upload/other/20240717/1721198858330911.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-2</p><p><a href="/u/upload/other/20240717/1721198858209438.webp"><img src="/u/upload/other/20240717/1721198858209438.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-3</p><p><a href="/u/upload/other/20240717/1721198858994610.webp"><img src="/u/upload/other/20240717/1721198858994610.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-4</p><p><a href="/u/upload/other/20240717/1721198858615729.webp"><img src="/u/upload/other/20240717/1721198858615729.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-5</p><p><a href="/u/upload/other/20240717/1721198858583005.webp"><img src="/u/upload/other/20240717/1721198858583005.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-6</p><p><a href="/u/upload/other/20240717/1721198858952679.webp"><img src="/u/upload/other/20240717/1721198858952679.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-7</p><p><a href="/u/upload/other/20240717/1721198858650130.webp"><img src="/u/upload/other/20240717/1721198858650130.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-8</p><p><a href="/u/upload/other/20240717/1721198858986535.webp"><img src="/u/upload/other/20240717/1721198858986535.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-9</p><p><a href="/u/upload/other/20240717/1721198858568514.webp"><img src="/u/upload/other/20240717/1721198858568514.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-10</p><p><a href="/u/upload/other/20240717/1721198858879726.webp"><img src="/u/upload/other/20240717/1721198858879726.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-11</p><p><a href="/u/upload/other/20240717/1721198858504517.webp"><img src="/u/upload/other/20240717/1721198858504517.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-12</p><p><a href="/u/upload/other/20240717/1721198858751208.webp"><img src="/u/upload/other/20240717/1721198858751208.webp" class="pure-img" alt="Animal"/></a></p><p>S/N: A63-13</p><p><a href="/u/upload/other/20240717/1721198862518183.webp"><img src="/u/upload/other/20240717/1721198862518183.webp" class="pure-img" alt="Animal"/></a></p><p>back</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidered round coaster" /> Buy Now $:9.99</a> <b>S/N: A63</b> </p>
-</div> 
-<p>Previous: <a href="/q/62.html">Five Star Embroidery Cloth Sticker</a></p>
-<p>Next: <a href="/q/64.html">Mid-Autumn Element Rabbit Embroidery Cloth Stic</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Embroidered round coaster</h1>
+                <time>2024-07-17</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered round coaster" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A63</b></p>
+               <p>Chinese Style Embroidery Coaster Embroidery Technology Overseas Gift Tea Coaster Bowl Mat Insulation Mat</p><p>Diameter：13cm</p><p>Complete set (13 styles in total) $:69.99 <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198850843830.webp">
+                        <img src="/u/upload/other/20240717/1721198850843830.webp" alt="Animal"/></a>
+                        <b>S/N: A63</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858241612.webp">
+                        <img src="/u/upload/other/20240717/1721198858241612.webp" alt="Animal"/></a>
+                        <b>S/N: A63-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858330911.webp">
+                        <img src="/u/upload/other/20240717/1721198858330911.webp" alt="Animal"/></a>
+                        <b>S/N: A63-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858209438.webp">
+                        <img src="/u/upload/other/20240717/1721198858209438.webp" alt="Animal"/></a>
+                        <b>S/N: A63-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858994610.webp">
+                        <img src="/u/upload/other/20240717/1721198858994610.webp" alt="Animal"/></a>
+                        <b>S/N: A63-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858615729.webp">
+                        <img src="/u/upload/other/20240717/1721198858615729.webp" alt="Animal"/></a>
+                        <b>S/N: A63-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858583005.webp">
+                        <img src="/u/upload/other/20240717/1721198858583005.webp" alt="Animal"/></a>
+                        <b>S/N: A63-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858952679.webp">
+                        <img src="/u/upload/other/20240717/1721198858952679.webp" alt="Animal"/></a>
+                        <b>S/N: A63-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858650130.webp">
+                        <img src="/u/upload/other/20240717/1721198858650130.webp" alt="Animal"/></a>
+                        <b>S/N: A63-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858986535.webp">
+                        <img src="/u/upload/other/20240717/1721198858986535.webp" alt="Animal"/></a>
+                        <b>S/N: A63-9</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858568514.webp">
+                        <img src="/u/upload/other/20240717/1721198858568514.webp" alt="Animal"/></a>
+                        <b>S/N: A63-10</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858879726.webp">
+                        <img src="/u/upload/other/20240717/1721198858879726.webp" alt="Animal"/></a>
+                        <b>S/N: A63-11</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858504517.webp">
+                        <img src="/u/upload/other/20240717/1721198858504517.webp" alt="Animal"/></a>
+                        <b>S/N: A63-12</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198858751208.webp">
+                        <img src="/u/upload/other/20240717/1721198858751208.webp" alt="Animal"/></a>
+                        <b>S/N: A63-13</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721198862518183.webp">
+                        <img src="/u/upload/other/20240717/1721198862518183.webp" alt="Animal"/></a>
+                        <b>back</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/62.html">Five Star Embroidery Cloth Sticker</a></p>
+            <p>Next: <a href="/q/64.html">Mid-Autumn Element Rabbit Embroidery Cloth Stic</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
