--- a/q/67.html
+++ b/q/67.html
@@ -1,55 +1,141 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Cute Flowers Butterfly Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Cute Flowers Butterfly Embroidered Cloth Embroidered Embroidered Applique Cloth Package Embellished Garment Ding Paste Wholesale.Complete set (13 styles in total) $:39.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Cute Flowers Butterfly Embroidery Cloth Sticker</h1>
-<time>2024-07-17</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute Flowers Butterfly Embroidery Cloth Sticker" />Buy Now  $:39.99 </a><b>S/N: A67</b></p>
-</div>
- <div class="row">
-  <p>Cute Flowers Butterfly Embroidered Cloth Embroidered Embroidered Applique Cloth Package Embellished Garment Ding Paste Wholesale.</p><p>Complete set (13 styles in total) $:39.99 &nbsp;<br/></p>
-  <p><a href="/u/upload/other/20240717/1721208101380205.webp"><img src="/u/upload/other/20240717/1721208101380205.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208101175382.webp"><img src="/u/upload/other/20240717/1721208101175382.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208101681925.webp"><img src="/u/upload/other/20240717/1721208101681925.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208101889694.webp"><img src="/u/upload/other/20240717/1721208101889694.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108414709.webp"><img src="/u/upload/other/20240717/1721208108414709.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108862432.webp"><img src="/u/upload/other/20240717/1721208108862432.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108461262.webp"><img src="/u/upload/other/20240717/1721208108461262.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108445533.webp"><img src="/u/upload/other/20240717/1721208108445533.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108180373.webp"><img src="/u/upload/other/20240717/1721208108180373.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108376336.webp"><img src="/u/upload/other/20240717/1721208108376336.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108756853.webp"><img src="/u/upload/other/20240717/1721208108756853.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108573000.webp"><img src="/u/upload/other/20240717/1721208108573000.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108803122.webp"><img src="/u/upload/other/20240717/1721208108803122.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108363774.webp"><img src="/u/upload/other/20240717/1721208108363774.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108658412.webp"><img src="/u/upload/other/20240717/1721208108658412.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108759162.webp"><img src="/u/upload/other/20240717/1721208108759162.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240717/1721208108283841.webp"><img src="/u/upload/other/20240717/1721208108283841.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Cute Flowers Butterfly Embroidery Cloth Sticker" /> Buy Now $:39.99</a> <b>S/N: A67</b> </p>
-</div> 
-<p>Previous: <a href="/q/66.html">Cute trumpet embroidery cloth sticker</a></p>
-<p>Next: <a href="/q/68.html">Planet Cartoon Astronaut Embroidered Cloth Sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Cute Flowers Butterfly Embroidery Cloth Sticker</h1>
+                <time>2024-07-17</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Cute Flowers Butterfly Embroidery Cloth Sticker" />Buy Now  $:39.99 </a> <b class="btn btn-sm btn-c">S/N: A67</b></p>
+               <p>Cute Flowers Butterfly Embroidered Cloth Embroidered Embroidered Applique Cloth Package Embellished Garment Ding Paste Wholesale.</p><p>Complete set (13 styles in total) $:39.99 &nbsp;<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101380205.webp">
+                        <img src="/u/upload/other/20240717/1721208101380205.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101175382.webp">
+                        <img src="/u/upload/other/20240717/1721208101175382.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101681925.webp">
+                        <img src="/u/upload/other/20240717/1721208101681925.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208101889694.webp">
+                        <img src="/u/upload/other/20240717/1721208101889694.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108414709.webp">
+                        <img src="/u/upload/other/20240717/1721208108414709.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108862432.webp">
+                        <img src="/u/upload/other/20240717/1721208108862432.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108461262.webp">
+                        <img src="/u/upload/other/20240717/1721208108461262.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108445533.webp">
+                        <img src="/u/upload/other/20240717/1721208108445533.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108180373.webp">
+                        <img src="/u/upload/other/20240717/1721208108180373.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108376336.webp">
+                        <img src="/u/upload/other/20240717/1721208108376336.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108756853.webp">
+                        <img src="/u/upload/other/20240717/1721208108756853.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108573000.webp">
+                        <img src="/u/upload/other/20240717/1721208108573000.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108803122.webp">
+                        <img src="/u/upload/other/20240717/1721208108803122.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108363774.webp">
+                        <img src="/u/upload/other/20240717/1721208108363774.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108658412.webp">
+                        <img src="/u/upload/other/20240717/1721208108658412.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108759162.webp">
+                        <img src="/u/upload/other/20240717/1721208108759162.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240717/1721208108283841.webp">
+                        <img src="/u/upload/other/20240717/1721208108283841.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/66.html">Cute trumpet embroidery cloth sticker</a></p>
+            <p>Next: <a href="/q/68.html">Planet Cartoon Astronaut Embroidered Cloth Sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
