--- a/q/69.html
+++ b/q/69.html
@@ -1,55 +1,111 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidery bear cartoon animal embroidery cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidery bear cartoon animal embroidery cloth sticker cute bag clothes sticker diy patch wholesale.Complete set (9 styles in total) $:19.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Embroidery bear cartoon animal embroidery cloth sticker</h1>
-<time>2024-07-18</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery bear cartoon animal embroidery cloth sticker" />Buy Now  $:19.99 </a><b>S/N: A69</b></p>
-</div>
- <div class="row">
-  <p>Embroidery bear cartoon animal embroidery cloth sticker cute bag clothes sticker diy patch wholesale.</p><p>Complete set (9 styles in total) $:19.99 <br/></p>
-  <p><a href="/u/upload/other/20240718/1721272523620786.webp"><img src="/u/upload/other/20240718/1721272523620786.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272523739168.webp"><img src="/u/upload/other/20240718/1721272523739168.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272523441288.webp"><img src="/u/upload/other/20240718/1721272523441288.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899453758.webp"><img src="/u/upload/other/20240718/1721272899453758.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899423559.webp"><img src="/u/upload/other/20240718/1721272899423559.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899676586.webp"><img src="/u/upload/other/20240718/1721272899676586.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899659037.webp"><img src="/u/upload/other/20240718/1721272899659037.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899130794.webp"><img src="/u/upload/other/20240718/1721272899130794.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899484947.webp"><img src="/u/upload/other/20240718/1721272899484947.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899491867.webp"><img src="/u/upload/other/20240718/1721272899491867.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899417818.webp"><img src="/u/upload/other/20240718/1721272899417818.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721272899954317.webp"><img src="/u/upload/other/20240718/1721272899954317.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidery bear cartoon animal embroidery cloth sticker" /> Buy Now $:19.99</a> <b>S/N: A69</b> </p>
-</div> 
-<p>Previous: <a href="/q/68.html">Planet Cartoon Astronaut Embroidered Cloth Sticker</a></p>
-<p>Next: <a href="/q/70.html">Bear Head Cartoon Animal Cloth Sticker</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Embroidery bear cartoon animal embroidery cloth sticker</h1>
+                <time>2024-07-18</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidery bear cartoon animal embroidery cloth sticker" />Buy Now  $:19.99 </a> <b class="btn btn-sm btn-c">S/N: A69</b></p>
+               <p>Embroidery bear cartoon animal embroidery cloth sticker cute bag clothes sticker diy patch wholesale.</p><p>Complete set (9 styles in total) $:19.99 <br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272523620786.webp">
+                        <img src="/u/upload/other/20240718/1721272523620786.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272523739168.webp">
+                        <img src="/u/upload/other/20240718/1721272523739168.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272523441288.webp">
+                        <img src="/u/upload/other/20240718/1721272523441288.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899453758.webp">
+                        <img src="/u/upload/other/20240718/1721272899453758.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899423559.webp">
+                        <img src="/u/upload/other/20240718/1721272899423559.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899676586.webp">
+                        <img src="/u/upload/other/20240718/1721272899676586.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899659037.webp">
+                        <img src="/u/upload/other/20240718/1721272899659037.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899130794.webp">
+                        <img src="/u/upload/other/20240718/1721272899130794.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899484947.webp">
+                        <img src="/u/upload/other/20240718/1721272899484947.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899491867.webp">
+                        <img src="/u/upload/other/20240718/1721272899491867.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899417818.webp">
+                        <img src="/u/upload/other/20240718/1721272899417818.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721272899954317.webp">
+                        <img src="/u/upload/other/20240718/1721272899954317.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/68.html">Planet Cartoon Astronaut Embroidered Cloth Sticker</a></p>
+            <p>Next: <a href="/q/70.html">Bear Head Cartoon Animal Cloth Sticker</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
