--- a/q/70.html
+++ b/q/70.html
@@ -1,55 +1,99 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Bear Head Cartoon Animal Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidery bearhead cartoon animal cloth cloth accessory patch clothing accessory handbill self-paste cloth.Complete set (8 styles in total) $:29.99">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a>>> </p>
-<h1>Bear Head Cartoon Animal Cloth Sticker</h1>
-<time>2024-07-18</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Bear Head Cartoon Animal Cloth Sticker" />Buy Now  $:29.99 </a><b>S/N: A70</b></p>
-</div>
- <div class="row">
-  <p>Embroidery bearhead cartoon animal cloth cloth accessory patch clothing accessory handbill self-paste cloth.</p><p>Complete set (8 styles in total) $:29.99 &nbsp;<br/></p>
-  <p><a href="/u/upload/other/20240718/1721274583932679.webp"><img src="/u/upload/other/20240718/1721274583932679.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274583111882.webp"><img src="/u/upload/other/20240718/1721274583111882.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588278466.webp"><img src="/u/upload/other/20240718/1721274588278466.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588960308.webp"><img src="/u/upload/other/20240718/1721274588960308.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588221604.webp"><img src="/u/upload/other/20240718/1721274588221604.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588541474.webp"><img src="/u/upload/other/20240718/1721274588541474.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588579228.webp"><img src="/u/upload/other/20240718/1721274588579228.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588206699.webp"><img src="/u/upload/other/20240718/1721274588206699.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588404051.webp"><img src="/u/upload/other/20240718/1721274588404051.webp" class="pure-img" alt="Animal"/></a></p><p></p><p><a href="/u/upload/other/20240718/1721274588196175.webp"><img src="/u/upload/other/20240718/1721274588196175.webp" class="pure-img" alt="Animal"/></a></p><p></p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Bear Head Cartoon Animal Cloth Sticker" /> Buy Now $:29.99</a> <b>S/N: A70</b> </p>
-</div> 
-<p>Previous: <a href="/q/69.html">Embroidery bear cartoon animal embroidery cloth sticker</a></p>
-<p>Next: <a href="javascript:;"> </a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/animal/index.html">Animal</a></p>
+                <h1>Bear Head Cartoon Animal Cloth Sticker</h1>
+                <time>2024-07-18</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Bear Head Cartoon Animal Cloth Sticker" />Buy Now  $:29.99 </a> <b class="btn btn-sm btn-c">S/N: A70</b></p>
+               <p>Embroidery bearhead cartoon animal cloth cloth accessory patch clothing accessory handbill self-paste cloth.</p><p>Complete set (8 styles in total) $:29.99 &nbsp;<br/></p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274583932679.webp">
+                        <img src="/u/upload/other/20240718/1721274583932679.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274583111882.webp">
+                        <img src="/u/upload/other/20240718/1721274583111882.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588278466.webp">
+                        <img src="/u/upload/other/20240718/1721274588278466.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588960308.webp">
+                        <img src="/u/upload/other/20240718/1721274588960308.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588221604.webp">
+                        <img src="/u/upload/other/20240718/1721274588221604.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588541474.webp">
+                        <img src="/u/upload/other/20240718/1721274588541474.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588579228.webp">
+                        <img src="/u/upload/other/20240718/1721274588579228.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588206699.webp">
+                        <img src="/u/upload/other/20240718/1721274588206699.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588404051.webp">
+                        <img src="/u/upload/other/20240718/1721274588404051.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/u/upload/other/20240718/1721274588196175.webp">
+                        <img src="/u/upload/other/20240718/1721274588196175.webp" alt="Animal"/></a>
+                        <b></b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/69.html">Embroidery bear cartoon animal embroidery cloth sticker</a></p>
+            <p>Next: <a href="javascript:;"> </a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
