--- a/q/8.html
+++ b/q/8.html
@@ -1,55 +1,117 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" />Buy Now  $:12.99 </a><b>S/N: A8</b></p>
-</div>
- <div class="row">
-  <p>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</p>
-  <p><a href="/q/upload/other/20240701/1719820142909310.webp"><img src="/q/upload/other/20240701/1719820142909310.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240701/1719820142867508.webp"><img src="/q/upload/other/20240701/1719820142867508.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240701/1719820142192546.webp"><img src="/q/upload/other/20240701/1719820142192546.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240701/1719820142627969.webp"><img src="/q/upload/other/20240701/1719820142627969.webp" class="pure-img" alt="Flower"/></a></p><p></p><p><a href="/q/upload/other/20240701/1719820148468509.webp"><img src="/q/upload/other/20240701/1719820148468509.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-1</p><p><a href="/q/upload/other/20240701/1719820148415017.webp"><img src="/q/upload/other/20240701/1719820148415017.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-2</p><p><a href="/q/upload/other/20240701/1719820148928790.webp"><img src="/q/upload/other/20240701/1719820148928790.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-3</p><p><a href="/q/upload/other/20240701/1719820148540864.webp"><img src="/q/upload/other/20240701/1719820148540864.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-4</p><p><a href="/q/upload/other/20240701/1719820148655115.webp"><img src="/q/upload/other/20240701/1719820148655115.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-5</p><p><a href="/q/upload/other/20240701/1719820148841630.webp"><img src="/q/upload/other/20240701/1719820148841630.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-6</p><p><a href="/q/upload/other/20240701/1719820148694865.webp"><img src="/q/upload/other/20240701/1719820148694865.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-7</p><p><a href="/q/upload/other/20240701/1719820149583730.webp"><img src="/q/upload/other/20240701/1719820149583730.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-8</p><p><a href="/q/upload/other/20240701/1719820149949314.webp"><img src="/q/upload/other/20240701/1719820149949314.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A8-9</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" /> Buy Now $:12.99</a> <b>S/N: A8</b> </p>
-</div> 
-<p>Previous: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
-<p>Next: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" />Buy Now  $:12.99 </a> <b class="btn btn-sm btn-c">S/N: A8</b></p>
+               <p>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</p>
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142909310.webp">
+                        <img src="/q/upload/other/20240701/1719820142909310.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142867508.webp">
+                        <img src="/q/upload/other/20240701/1719820142867508.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142192546.webp">
+                        <img src="/q/upload/other/20240701/1719820142192546.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820142627969.webp">
+                        <img src="/q/upload/other/20240701/1719820142627969.webp" alt="Flower"/></a>
+                        <b></b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148468509.webp">
+                        <img src="/q/upload/other/20240701/1719820148468509.webp" alt="Flower"/></a>
+                        <b>S/N: A8-1</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148415017.webp">
+                        <img src="/q/upload/other/20240701/1719820148415017.webp" alt="Flower"/></a>
+                        <b>S/N: A8-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148928790.webp">
+                        <img src="/q/upload/other/20240701/1719820148928790.webp" alt="Flower"/></a>
+                        <b>S/N: A8-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148540864.webp">
+                        <img src="/q/upload/other/20240701/1719820148540864.webp" alt="Flower"/></a>
+                        <b>S/N: A8-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148655115.webp">
+                        <img src="/q/upload/other/20240701/1719820148655115.webp" alt="Flower"/></a>
+                        <b>S/N: A8-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148841630.webp">
+                        <img src="/q/upload/other/20240701/1719820148841630.webp" alt="Flower"/></a>
+                        <b>S/N: A8-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820148694865.webp">
+                        <img src="/q/upload/other/20240701/1719820148694865.webp" alt="Flower"/></a>
+                        <b>S/N: A8-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820149583730.webp">
+                        <img src="/q/upload/other/20240701/1719820149583730.webp" alt="Flower"/></a>
+                        <b>S/N: A8-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240701/1719820149949314.webp">
+                        <img src="/q/upload/other/20240701/1719820149949314.webp" alt="Flower"/></a>
+                        <b>S/N: A8-9</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
+            <p>Next: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
