--- a/q/9.html
+++ b/q/9.html
@@ -1,55 +1,159 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a>>> </p>
-<h1>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</h1>
-<time>2024-07-01</time>
-<div class="social-proof">
- <p><a href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" />Buy Now  $:9.99 </a><b>S/N: A9</b></p>
-</div>
- <div class="row">
-  
-  <p><a href="/q/upload/other/20240628/1719576827388624.webp"><img src="/q/upload/other/20240628/1719576827388624.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered</p><p><a href="/q/upload/other/20240628/1719576843113029.webp"><img src="/q/upload/other/20240628/1719576843113029.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered</p><p><a href="/q/upload/other/20240628/1719576846447497.webp"><img src="/q/upload/other/20240628/1719576846447497.webp" class="pure-img" alt="Flower"/></a></p><p>Embroidered</p><p><a href="/q/upload/other/20240628/1719576856958959.webp"><img src="/q/upload/other/20240628/1719576856958959.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-2</p><p><a href="/q/upload/other/20240628/1719576856555027.webp"><img src="/q/upload/other/20240628/1719576856555027.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-3</p><p><a href="/q/upload/other/20240628/1719576856161288.webp"><img src="/q/upload/other/20240628/1719576856161288.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-4</p><p><a href="/q/upload/other/20240628/1719576856715162.webp"><img src="/q/upload/other/20240628/1719576856715162.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-5</p><p><a href="/q/upload/other/20240628/1719576856645983.webp"><img src="/q/upload/other/20240628/1719576856645983.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-6</p><p><a href="/q/upload/other/20240628/1719576856470802.webp"><img src="/q/upload/other/20240628/1719576856470802.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-7</p><p><a href="/q/upload/other/20240628/1719576856622626.webp"><img src="/q/upload/other/20240628/1719576856622626.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-8</p><p><a href="/q/upload/other/20240628/1719576856982591.webp"><img src="/q/upload/other/20240628/1719576856982591.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-9</p><p><a href="/q/upload/other/20240628/1719576856923161.webp"><img src="/q/upload/other/20240628/1719576856923161.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-10</p><p><a href="/q/upload/other/20240628/1719576856436102.webp"><img src="/q/upload/other/20240628/1719576856436102.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-11</p><p><a href="/q/upload/other/20240628/1719576856241313.webp"><img src="/q/upload/other/20240628/1719576856241313.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-12</p><p><a href="/q/upload/other/20240628/1719576856278538.webp"><img src="/q/upload/other/20240628/1719576856278538.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-13</p><p><a href="/q/upload/other/20240628/1719576856130688.webp"><img src="/q/upload/other/20240628/1719576856130688.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-14</p><p><a href="/q/upload/other/20240628/1719576856472497.webp"><img src="/q/upload/other/20240628/1719576856472497.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-15</p><p><a href="/q/upload/other/20240628/1719576856677915.webp"><img src="/q/upload/other/20240628/1719576856677915.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-16</p><p><a href="/q/upload/other/20240628/1719576856931127.webp"><img src="/q/upload/other/20240628/1719576856931127.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-17</p><p><a href="/q/upload/other/20240628/1719576856944140.webp"><img src="/q/upload/other/20240628/1719576856944140.webp" class="pure-img" alt="Flower"/></a></p><p>S/N: A9-18</p> 
-</div>
-<div class="social-proof">
- <p><a href="" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" /> Buy Now $:9.99</a> <b>S/N: A9</b> </p>
-</div> 
-<p>Previous: <a href="/q/8.html">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</a></p>
-<p>Next: <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/patches/index.html">Applique Patches</a> >>  <a href="/q/flower/index.html">Flower</a></p>
+                <h1>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</h1>
+                <time>2024-07-01</time>
+				 <p><a class="btn btn-sm btn-b" href="" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" />Buy Now  $:9.99 </a> <b class="btn btn-sm btn-c">S/N: A9</b></p>
+               
+            </div>
+			 <div class="row">
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576827388624.webp">
+                        <img src="/q/upload/other/20240628/1719576827388624.webp" alt="Flower"/></a>
+                        <b>Embroidered</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576843113029.webp">
+                        <img src="/q/upload/other/20240628/1719576843113029.webp" alt="Flower"/></a>
+                        <b>Embroidered</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576846447497.webp">
+                        <img src="/q/upload/other/20240628/1719576846447497.webp" alt="Flower"/></a>
+                        <b>Embroidered</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856958959.webp">
+                        <img src="/q/upload/other/20240628/1719576856958959.webp" alt="Flower"/></a>
+                        <b>S/N: A9-2</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856555027.webp">
+                        <img src="/q/upload/other/20240628/1719576856555027.webp" alt="Flower"/></a>
+                        <b>S/N: A9-3</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856161288.webp">
+                        <img src="/q/upload/other/20240628/1719576856161288.webp" alt="Flower"/></a>
+                        <b>S/N: A9-4</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856715162.webp">
+                        <img src="/q/upload/other/20240628/1719576856715162.webp" alt="Flower"/></a>
+                        <b>S/N: A9-5</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856645983.webp">
+                        <img src="/q/upload/other/20240628/1719576856645983.webp" alt="Flower"/></a>
+                        <b>S/N: A9-6</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856470802.webp">
+                        <img src="/q/upload/other/20240628/1719576856470802.webp" alt="Flower"/></a>
+                        <b>S/N: A9-7</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856622626.webp">
+                        <img src="/q/upload/other/20240628/1719576856622626.webp" alt="Flower"/></a>
+                        <b>S/N: A9-8</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856982591.webp">
+                        <img src="/q/upload/other/20240628/1719576856982591.webp" alt="Flower"/></a>
+                        <b>S/N: A9-9</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856923161.webp">
+                        <img src="/q/upload/other/20240628/1719576856923161.webp" alt="Flower"/></a>
+                        <b>S/N: A9-10</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856436102.webp">
+                        <img src="/q/upload/other/20240628/1719576856436102.webp" alt="Flower"/></a>
+                        <b>S/N: A9-11</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856241313.webp">
+                        <img src="/q/upload/other/20240628/1719576856241313.webp" alt="Flower"/></a>
+                        <b>S/N: A9-12</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856278538.webp">
+                        <img src="/q/upload/other/20240628/1719576856278538.webp" alt="Flower"/></a>
+                        <b>S/N: A9-13</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856130688.webp">
+                        <img src="/q/upload/other/20240628/1719576856130688.webp" alt="Flower"/></a>
+                        <b>S/N: A9-14</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856472497.webp">
+                        <img src="/q/upload/other/20240628/1719576856472497.webp" alt="Flower"/></a>
+                        <b>S/N: A9-15</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856677915.webp">
+                        <img src="/q/upload/other/20240628/1719576856677915.webp" alt="Flower"/></a>
+                        <b>S/N: A9-16</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856931127.webp">
+                        <img src="/q/upload/other/20240628/1719576856931127.webp" alt="Flower"/></a>
+                        <b>S/N: A9-17</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a class="btn btn-sm btn-a" href="/q/upload/other/20240628/1719576856944140.webp">
+                        <img src="/q/upload/other/20240628/1719576856944140.webp" alt="Flower"/></a>
+                        <b>S/N: A9-18</b>
+                    </a>
+                </div> 
+			</div>
+			<p>Previous: <a href="/q/8.html">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</a></p>
+            <p>Next: <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a></p>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
