--- a/q/animal_2/index.html
+++ b/q/animal_2/index.html
@@ -1,79 +1,92 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>Animal</h1>
-<h4></h4>
-<p>Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals</p>
-<div class="row">
-	
-    <div class="col c6"><a href="/q/52.html" title="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20"><img src="/u/upload/other/20240716/1721114585962016.webp" alt="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20"><b>$:69.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/51.html" title="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10"><img src="/u/upload/other/20240716/1721114134135334.webp" alt="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10"><b>$:69.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/50.html" title="Embroidery cloth paste wholesale,2024-07-16 14:39:44"><img src="/u/upload/other/20240716/1721112302640195.webp" alt="Embroidery cloth paste wholesale,2024-07-16 14:39:44"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/49.html" title="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18"><img src="/u/upload/other/20240716/1721101271678946.webp" alt="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/48.html" title="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03"><img src="/u/upload/other/20240716/1721100133635422.webp" alt="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03"><b>$:49.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/47.html" title="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29"><img src="/u/upload/other/20240716/1721097742315049.webp" alt="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29"><b>$:49.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/46.html" title="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08"><img src="/u/upload/other/20240716/1721101882184015.webp" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/45.html" title="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46"><img src="/u/upload/other/20240716/1721093832149983.webp" alt="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/44.html" title="Fish Embroidery Sticker,2024-07-16 08:59:59"><img src="/u/upload/other/20240716/1721092382830527.webp" alt="Fish Embroidery Sticker,2024-07-16 08:59:59"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/43.html" title="Skeleton embroidered cloth sticker,2024-07-16 07:49:11"><img src="/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/42.html" title="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54"><img src="/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/40.html" title="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03"><img src="/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03"><b>$:69.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24"><img src="/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59"><img src="/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59"><b>$:29.99</b></a></div>
-	
-</div>
-
-<p><a href="/q/animal/index.html">Previous</a>  <a href="/q/animal_3/index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Animal</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/61.html" title="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721122103920304.webp" alt="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/58.html" title="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721120358159448.webp" alt="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33">
+                        <b>$:59.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/57.html" title="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721118138901605.webp" alt="Panda Embroidery Cloth Sticker,2024-07-16 16:15:34">
+                        <b>$:59.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/56.html" title="Butterfly Embroidery Cloth Sticker,2024-07-16 16:03:53" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721117695495675.webp" alt="Butterfly Embroidery Cloth Sticker,2024-07-16 16:03:53">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/53.html" title="Leaf embroidery cloth sticker can be ironed hand stitch patch,2024-07-16 15:23:44" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721115559502173.webp" alt="Leaf embroidery cloth sticker can be ironed hand stitch patch,2024-07-16 15:23:44">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/52.html" title="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721114585962016.webp" alt="Sailboat series embroidery cloth stickers,2024-07-16 15:17:20">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/51.html" title="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721114134135334.webp" alt="Flamingo Embroidery Cloth Sticker,2024-07-16 15:13:10">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/50.html" title="Embroidery cloth paste wholesale,2024-07-16 14:39:44" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721112302640195.webp" alt="Embroidery cloth paste wholesale,2024-07-16 14:39:44">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/49.html" title="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721101271678946.webp" alt="Cartoon shoes embroidered cloth sticker,2024-07-16 11:38:18">
+                        <b>$:29.99</b>
+                    </a>
+                </div><br />
+             <p><a href="/q/animal/index.html" class="btn btn-b">Previous</a>  <a href="/q/animal_3/index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
