--- a/q/animal_3/index.html
+++ b/q/animal_3/index.html
@@ -1,77 +1,92 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>Animal</h1>
-<h4></h4>
-<p>Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals</p>
-<div class="row">
-	
-    <div class="col c6"><a href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51"><img src="/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22"><img src="/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47"><img src="/u/upload/other/20240717/1721228977433260.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/32.html" title="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51"><img src="/q/upload/other/20240706/1720251451442410.webp" alt="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/31.html" title="Cute cartoon cat,2024-07-06 15:15:09"><img src="/q/upload/other/20240706/1720250443946766.webp" alt="Cute cartoon cat,2024-07-06 15:15:09"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/30.html" title="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58"><img src="/q/upload/other/20240706/1720249515387478.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13"><img src="/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46"><img src="/q/upload/other/20240706/1720230542547710.webp" alt="Cartoon Rabbit Astronaut,2024-07-06 09:42:46"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35"><img src="/q/upload/other/20240706/1720226337562267.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43"><img src="/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43"><b>$:19.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53"><img src="/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26"><img src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><b>$:12</b></a></div>
-	
-    <div class="col c6"><a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><img src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><b>$:12</b></a></div>
-	
-</div>
-
-<p><a href="/q/animal_2/index.html">Previous</a>  <a href="javascript:;index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Animal</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/48.html" title="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721100133635422.webp" alt="Cartoon Cubs Embroidered Cloth Sticker,2024-07-16 10:53:03">
+                        <b>$:49.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/47.html" title="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721097742315049.webp" alt="Cartoon rabbit cat wing cloth,2024-07-16 10:09:29">
+                        <b>$:49.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/46.html" title="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721101882184015.webp" alt="Skeleton Finger Ghost Head Embroidered Cloth Sticker,2024-07-16 09:41:08">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/45.html" title="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721093832149983.webp" alt="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/44.html" title="Fish Embroidery Sticker,2024-07-16 08:59:59" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721092382830527.webp" alt="Fish Embroidery Sticker,2024-07-16 08:59:59">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/43.html" title="Skeleton embroidered cloth sticker,2024-07-16 07:49:11" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/42.html" title="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54" class="btn btn-a" >
+                        <img src="/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/40.html" title="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03" class="btn btn-a" >
+                        <img src="/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24" class="btn btn-a" >
+                        <img src="/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
+                        <b>$:9.99</b>
+                    </a>
+                </div><br />
+             <p><a href="/q/animal_2/index.html" class="btn btn-b">Previous</a>  <a href="/q/animal_4/index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
