--- a/q/contact/index.html
+++ b/q/contact/index.html
@@ -1,49 +1,36 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>contacts-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Email: web@zalalaa.comQ Q: 9050150WeChat:qq9050150Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/index.html"> Home</a> >> <a href="/q/contact/index.html">Contact Us</a></p>
-<h1>contacts</h1>
-<time>2016-05-27</time>
- <div class="grid">
-<img src="/q/logo.webp" alt="[content::title],[content::date]">
-  <p>Email:&nbsp;</p><p>web@zalalaa.com</p><p>9050150@qq.com</p><p>Q Q: 9050150</p><p>WeChat:qq9050150</p><p><img src="https://c.zalalaa.com/q/wx.webp" width="200" height="200"/></p><p>Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</p><p><br/></p>
-   
-</div>
-
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+			<p><a href="/index.html"> Home</a> >> <a href="/q/contact/index.html">Contact Us</a></p>
+                <h1>contacts</h1>
+                <time>2016-05-27</time>
+               <p>Email:&nbsp;</p><p>web@zalalaa.com</p><p>9050150@qq.com</p><p>Q Q: 9050150</p><p>WeChat:qq9050150</p><p><img src="https://c.zalalaa.com/q/wx.webp" width="200" height="200"/></p><p>Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</p><p><br/></p> 
+            </div>
+			 <div class="row">
+			</div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
