--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -1,79 +1,92 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>Flower</h1>
-<h4></h4>
-<p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers</p>
-<div class="row">
-	
-    <div class="col c6"><a href="/q/60.html" title="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02"><img src="/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/59.html" title="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49"><img src="/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/55.html" title="Fruit and vegetable embroidery,2024-07-16 15:51:27"><img src="/u/upload/other/20240716/1721116996941079.webp" alt="Fruit and vegetable embroidery,2024-07-16 15:51:27"><b>$:69.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/54.html" title="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12"><img src="/u/upload/other/20240716/1721116021995153.webp" alt="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49"><img src="/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25"><img src="/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32"><img src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41"><img src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40"><img src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27"><img src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23"><img src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13"><img src="/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48"><img src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46"><img src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46"><b>$:29.99</b></a></div>
-	
-</div>
-
-<p><a href="javascript:;index.html">Previous</a>  <a href="/q/flower_2/index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Flower</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/60.html" title="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721121730300987.webp" alt="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/59.html" title="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721121005689493.webp" alt="Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker,2024-07-16 16:59:49">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/55.html" title="Fruit and vegetable embroidery,2024-07-16 15:51:27" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721116996941079.webp" alt="Fruit and vegetable embroidery,2024-07-16 15:51:27">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/54.html" title="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721116021995153.webp" alt="Cartoon flower cloth embroidery patch,2024-07-16 15:44:12">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49" class="btn btn-a" >
+                        <img src="/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25" class="btn btn-a" >
+                        <img src="/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
+                        <b>$:9.99</b>
+                    </a>
+                </div><br />
+             <p><a href="javascript:;index.html" class="btn btn-b">Previous</a>  <a href="/q/flower_2/index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
