--- a/q/gbook/index.html
+++ b/q/gbook/index.html
@@ -1,51 +1,38 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>在线留言-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>在线留言</h1>
-<h4>有什么问题欢迎您随时反馈</h4>
-<p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
-<div class="row">
-	
-</div>
-
-<p><a href="javascript:;index.html">Previous</a>  <a href="javascript:;index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>在线留言</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row"><br />
+             <p><a href="javascript:;index.html" class="btn btn-b">Previous</a>  <a href="javascript:;index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
