--- a/q/patches_4/index.html
+++ b/q/patches_4/index.html
@@ -1,79 +1,92 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Applique Patches-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin." height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>Applique Patches</h1>
-<h4></h4>
-<p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers</p>
-<div class="row">
-	
-    <div class="col c6"><a href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35"><img src="/q/upload/other/20240706/1720226337562267.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43"><img src="/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43"><b>$:19.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53"><img src="/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53"><b>$:39.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32"><img src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41"><img src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40"><img src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27"><img src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23"><img src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23"><b>$:9.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13"><img src="/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48"><img src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46"><img src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46"><b>$:29.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13"><img src="/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13"><img src="/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13"><b>$:12.99</b></a></div>
-	
-    <div class="col c6"><a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><b>$:12.99</b></a></div>
-	
-</div>
-
-<p><a href="/q/patches_3/index.html">Previous</a>  <a href="/q/patches_5/index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Applique Patches</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/43.html" title="Skeleton embroidered cloth sticker,2024-07-16 07:49:11" class="btn btn-a" >
+                        <img src="/u/upload/other/20240716/1721091299902270.webp" alt="Skeleton embroidered cloth sticker,2024-07-16 07:49:11">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/42.html" title="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54" class="btn btn-a" >
+                        <img src="/u/upload/other/20240715/1721035723888537.webp" alt="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49" class="btn btn-a" >
+                        <img src="/u/upload/other/20240715/1721031033744472.webp" alt="Embroidery Little Flowers,2024-07-15 15:47:49">
+                        <b>$:39.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/40.html" title="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03" class="btn btn-a" >
+                        <img src="/u/upload/other/20240715/1721029314783487.webp" alt="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24" class="btn btn-a" >
+                        <img src="/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59" class="btn btn-a" >
+                        <img src="/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25" class="btn btn-a" >
+                        <img src="/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51" class="btn btn-a" >
+                        <img src="/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22" class="btn btn-a" >
+                        <img src="/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
+                        <b>$:29.99</b>
+                    </a>
+                </div><br />
+             <p><a href="/q/patches_3/index.html" class="btn btn-b">Previous</a>  <a href="/q/patches_5/index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
