--- a/q/patches_6/index.html
+++ b/q/patches_6/index.html
@@ -1,70 +1,92 @@
-<!doctype html>
-<html lang="en">
-<meta charset="utf-8">
-<title>Applique Patches-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/u/c.min.css">
-<link rel="stylesheet" href="/u/c.css">
-<header>
-  <a href="/index.html">
-    <div><img src="/u/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-<button class="btn-close btn btn-sm">×</button>
-</header>
-<main class="index">
-<p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  38 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
-<h1>Applique Patches</h1>
-<h4></h4>
-<p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
-<div class="row">
-	
-    <div class="col c4"><a href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13"><p>$:12.99</p></a></div>
-	
-    <div class="col c4"><a href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13"><p>$:12.99</p></a></div>
-	
-    <div class="col c4"><a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="btn btn-sm btn-b"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><p>$:12.99</p></a></div>
-	
-    <div class="col c4"><a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><p>$:12</p></a></div>
-	
-    <div class="col c4"><a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="btn btn-sm btn-b"><img src="/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><p>$:13.99</p></a></div>
-	
-    <div class="col c4"><a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719800847146446.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><p>$:9.99</p></a></div>
-	
-    <div class="col c4"><a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719800738209747.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><p>$:12</p></a></div>
-	
-    <div class="col c4"><a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><p>$:12</p></a></div>
-	
-    <div class="col c4"><a href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09" class="btn btn-sm btn-b"><img src="/q/upload/other/20240701/1719800181983602.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09"><p>$:12.99</p></a></div>
-	
-</div>
-
-<p><a href="/q/patches_5/index.html">Previous</a>  <a href="javascript:;index.html">Next</a></p>
-  
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34"><p>Privacy Policy</p></a></li></ul>
-<h3>Video</h3><ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="/index.html">Home</a>
-        <a href="/q/abouts/index.html">About Us</a>
-        <a href="/q/patches/index.html">Applique Patches</a>
-        <a href="/q/article/index.html">Blog</a>
-        <a href="/q/contact/index.html">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  <p>Made in <a href="https://www.zalalaa.com/index.html">Zalalaa.com</a></p>
-</footer>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Applique Patches</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers
+                </p>
+               <p> <a href="/q/hot/index.html" title="Hot sales" class="btn btn-b btn-sm smooth">Hot sales  5 </a>  <a href="/q/animal/index.html" title="Animal" class="btn btn-b btn-sm smooth">Animal  41 </a>  <a href="/q/flower/index.html" title="Flower" class="btn btn-b btn-sm smooth">Flower  21 </a>  </p>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
+                        <b>$:12.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23" class="btn btn-a" >
+                        <img src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
+                        <b>$:9.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
+                        <b>$:12.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48" class="btn btn-a" >
+                        <img src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
+                        <b>$:12.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="btn btn-a" >
+                        <img src="/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
+                        <b>$:12.99</b>
+                    </a>
+                </div><br />
+             <p><a href="/q/patches_5/index.html" class="btn btn-b">Previous</a>  <a href="/q/patches_7/index.html" class="btn btn-b">Next</a></p>
+            </div>
+		</div>
+            <div class="row">
+               <div class="col c1"> <img src="/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
